--- a/01_agama/ekottarika/09/EA_09_04.md
+++ b/01_agama/ekottarika/09/EA_09_04.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 4. The Mind (2)'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 4. The Mind (2)'
 type: kramdown
 base: ../../../
 previous: EA_09_03.html
 next: EA_09_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 4. The Mind (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 心</th>
+  <th class='en'>4. The Mind (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.562c10'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c11'>爾時，世尊告諸比丘： 「我不見一法疾於心者。 無譬可喩。 猶如獼猴捨一取一，心不專定。 心亦如是，前想後想所念不同。 是故，諸比丘，凡夫之人不能觀察心意所由。</td>
+    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. There’s no comparison for it. The mind drops one thing and picks up another when it isn’t focused and settled, just like a monkey. The mind is likewise when that previous and subsequent perceptions of its thoughts aren’t the same. Therefore, monks, ordinary people are unable to observe the origin of their mind’s thinking.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c14'>「是故，諸比丘，常當降伏心意得趣善道。 是故，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c16'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved of it.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. There’s no comparison for it. The mind drops one thing and picks up another when it isn’t focused and settled, just like a monkey. The mind is likewise when that previous and subsequent perceptions of its thoughts aren’t the same. Therefore, monks, ordinary people are unable to observe the origin of their mind’s thinking.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved of it.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0562c10" target="_blank">T125.2.562c10-17</a>. The metaphor of the distracted mind and a monkey is also found in <a href="https://www.suttacentral.net/sn12.61" target="_blank">SN 12.61</a> and SĀ 3.7 (289). [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-### Notes
-
-1. {:#n1} The metaphor of the distracted mind and a monkey is also found in [SN 12.61](https://www.suttacentral.net/sn12.61){:target="_blank"} and SĀ 3.7 (289). [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
