--- a/01_agama/ekottarika/09/EA_09_05.md
+++ b/01_agama/ekottarika/09/EA_09_05.md
@@ -1,53 +1,79 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 5. Downfall'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 5. Downfall'
 type: kramdown
 base: ../../../
 previous: EA_09_04.html
 next: EA_09_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 5. Downfall
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 墮</th>
+  <th class='en'>5. Downfall</th>
+  <tr>
+    <td class='ch' title='T125.2.562c18'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c19'>爾時，世尊告諸比丘： 「我恒觀見一人心中所念之事： 『此人，如屈伸臂頃，墮泥㴝中。』 所以然者？ 由惡心故，心之生病，墜墮地獄。</td>
+    <td>It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to Hell<sup id="ref2"><a href="#n2">2</a></sup> in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c22'>爾時，世尊便説偈言：</td>
+    <td>The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.562c23'><ul class='verse'>
+    <li class='ch'>「猶如有一人<br/>
+    心懷瞋恚想<br/>
+    今告諸比丘<br/>
+    廣演其義趣</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Suppose that a person<br/>
+    Harbors hateful notions in their heart.<br/>
+    Now, I’ll tell you monks<br/>
+    The meaning of this in detail.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.562c25'><ul class='verse'>
+    <li class='ch'>今正是其時<br/>
+    設有命終者<br/>
+    假令入地獄<br/>
+    由心穢行故</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Supposing their life were to end<br/>
+    Right at this moment in time,<br/>
+    Then they would be sent to Hell<br/>
+    Because of their mind’s defiled conduct.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.562c27'>「是故，諸比丘，當降伏心，勿生穢行。 如是，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, one should control their mind and not do defiled conduct. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c28'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to Hell[\[2\]](#n2){:#ref2} in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Suppose that a person\\
-Harbors hateful notions in their heart.\\
-Now, I’ll tell you monks\\
-The meaning of this in detail.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0562c18" target="_blank">T125.2.562c18-29</a>. This <em>sūtra</em> is parallel to <a href="https://www.suttacentral.net/an1.43" target="_blank">AN 1.43</a> and <a href="https://www.suttacentral.net/iti20" target="_blank">Iti 20</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Hell</em>. C. 泥㴝 or 泥犂 (MC. nei-lei = G. <em>nara[ga]</em>), P/S. <em>naraka</em>. The Chinese transliterates the Indic word that was equivalent to English “Hell” as a place of punishment in the afterlife. <em>Naraka</em> literally means a pit, so a literal translation to English could be “the Pit.” The next occurrence of “Hell,” however, translates the Indic name to Chinese as 地獄 (lit. “earth prison”). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}Supposing their life were to end\\
-Right at this moment in time,\\
-Then they would be sent to Hell\\
-Because of their mind’s defiled conduct.
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 3 March 2023</p>
 
-4\. “Therefore, monks, one should control their mind and not do defiled conduct. Thus, monks, you should train yourselves.”
-{:#p4}
-
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel to [AN 1.43](https://www.suttacentral.net/an1.43){:target="_blank"} and [Iti 20](https://www.suttacentral.net/iti20){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *Hell*. C. 泥㴝 or 泥犂 (MC. nei-lei = G. *nara[ga]*), P/S. *naraka*. The Chinese transliterates the Indic word that was equivalent to English “Hell” as a place of punishment in the afterlife. *Naraka* literally means a pit, so a literal translation to English could be “the Pit.” The next occurrence of “Hell,” however, translates the Indic name to Chinese as 地獄 (lit. “earth prison”). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 3 March 2023
-{: .revised}
-
----
+<hr/>
