--- a/01_agama/ekottarika/09/EA_09_06.md
+++ b/01_agama/ekottarika/09/EA_09_06.md
@@ -1,52 +1,78 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 6. Birth in Heaven'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 6. Birth in Heaven'
 type: kramdown
 base: ../../../
 previous: EA_09_05.html
 next: EA_09_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 6. Birth in Heaven
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 生天</th>
+  <th class='en'>6. Birth in Heaven</th>
+  <tr>
+    <td class='ch' title='T125.2.563a1'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a2'>爾時，世尊告諸比丘： 「我恒觀見一人心中所念之事。 如屈伸臂頃而生天上。 所以然者？ 由善心故。 已生善心，便生天上。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will be born up in Heaven in the time it takes to flex their arm.’ Why is that? It’s because of their good mind. Having given rise to a good mind, they’ll be born up in Heaven.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a4'>爾時，世尊便説偈言：</td>
+    <td>The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.563a6'><ul class='verse'>
+    <li class='ch'>「設復有一人<br/>
+    而生善妙心。<br/>
+    今告諸比丘<br/>
+    廣演其義趣。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Suppose that a person<br/>
+    Produces a good and wonderful mind.<br/>
+    Now, I’ll tell you monks<br/>
+    The meaning of this in detail.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.563a8'><ul class='verse'>
+    <li class='ch'>今正是其時<br/>
+    設有命終者，<br/>
+    便得生天上<br/>
+    由心善行故。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Supposing their life were to end<br/>
+    Right at this moment in time,<br/>
+    They would be born up in Heaven<br/>
+    Because of their mind’s good conduct.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.563a10'>「是故，諸比丘，當發淨意勿生穢行。 如是，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, one should purify their thinking and not produce defiled conduct. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a11'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will be born up in Heaven in the time it takes to flex their arm.’ Why is that? It’s because of their good mind. Having given rise to a good mind, they’ll be born up in Heaven.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Suppose that a person\\
-Produces a good and wonderful mind.\\
-Now, I’ll tell you monks\\
-The meaning of this in detail.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0563a01" target="_blank">T125.2.563a01-12</a>. This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.44" target="_target">AN 1.44</a> and <a href="https://www.suttacentral.net/iti21" target="_blank">Iti 21</a>. It’s closer to Iti 21 in format, and the concluding are also very similar to the Iti version, but this <em>sūtra</em> adds a conclusion that was standard for EĀ. AN 1.44 includes only the prose portion of the <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}Supposing their life were to end\\
-Right at this moment in time,\\
-They would be born up in Heaven\\
-Because of their mind’s good conduct.
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 3 March 2023</p>
 
-4\. “Therefore, monks, one should purify their thinking and not produce defiled conduct. Thus, monks, you should train yourselves.”
-{:#p4}
-
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.44" target="_target">AN 1.44</a> and <a href="https://www.suttacentral.net/iti21" target="_blank">Iti 21</a>. It’s closer to Iti 21 in format, and the concluding are also very similar to the Iti version, but this <em>sūtra</em> adds a conclusion that was standard for EĀ. AN 1.44 includes only the prose portion of the <em>sūtra</em>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 3 March 2023
-{: .revised}
-
----
+<hr/>
