--- a/01_agama/ekottarika/09/EA_09_09.md
+++ b/01_agama/ekottarika/09/EA_09_09.md
@@ -1,45 +1,53 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 9. Notions of Desire'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 9. Notions of Desire'
 type: kramdown
 base: ../../../
 previous: EA_09_08.html
 next: EA_09_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 9. Notions of Desire
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 欲想</th>
+  <th class='en'>9. Notions of Desire</th>
+  <tr>
+    <td class='ch' title='T125.2.563b11'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b12'>爾時，世尊告諸比丘： 「我於此眾中不見一法無欲想便起欲想，已起欲想便増益 ⋯無瞋恚想便起瞋恚，已起瞋恚便増多 ⋯無睡眠想便起睡眠，已起睡眠便増多 ⋯無調戲想便起調戲，已起調戲便増多 ⋯無疑想便起疑想，已起疑想便増多⋯</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “In this assembly, I don’t see a single thing that produces notions of desire where there are none and increases notions of the desire that have arisen … produces anger where there is none and increases anger that has arisen … produces sleepiness where there is none and increases sleepiness that has arisen … produces agitation where there is none and increases agitation that has arisen … produces doubt where there is none and increases doubt that has arisen …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b17'>「亦當觀惡露、不淨想。 設作亂想，無欲想便有欲想，已有欲想便増多 ⋯瞋恚⋯睡眠 ⋯本無疑想便起疑想，疑想已起便増多。</td>
+    <td id='p3'>3. “One should contemplate the foul discharges and perceptions of impurity. If one becomes distracted,<sup id="ref2"><a href="#n2">2</a></sup> then notions of desire will arise where there were none and notions of desire that have arisen will increase … anger … sleepiness … [agitation] … notions of doubt will arise where there were none and doubts that have arisen will increase.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b20'>「是故，諸比丘，莫作亂想常當專意。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, don’t become distracted and keep your thinking focused. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b21'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved of it.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “In this assembly, I don’t see a single thing that produces notions of desire where there are none and increases notions of the desire that have arisen … produces anger where there is none and increases anger that has arisen … produces sleepiness where there is none and increases sleepiness that has arisen … produces agitation where there is none and increases agitation that has arisen … produces doubt where there is none and increases doubt that has arisen …
-{:#p2}
+<hr/>
 
-3\. “One should contemplate the foul discharges and perceptions of impurity. If one becomes distracted,[\[2\]](#n2){:#ref2} then notions of desire will arise where there were none and notions of desire that have arisen will increase … anger … sleepiness … [agitation] … notions of doubt will arise where there were none and doubts that have arisen will increase.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, don’t become distracted and keep your thinking focused. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0563b11" target="_blank">T125.2.563b11-22</a>. This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.11-20" target="_blank">AN 1.11-15</a>, but in AN it has been divided into five <em>sutta</em>s, one for each hindrance. It may be that EĀ 9.9-10 and AN 1.11-20 are later divisions of an older <em>sūtra</em> in the same way that EĀ 9.7-8 and AN 1.1-10 appear to divide a single <em>sūtra</em> like T792.</p>
+<p>In AN 1.11-20, each <em>sutta</em> identifies a particular reason (P. <em>nimitta</em>) for a hindrance to arise or cease. EĀ 9.9-10 instead address all five hindrances in the context of contemplating the impurities, suggesting that the specific context of the hindrances being impediments to <em>samādhi</em> has been lost in the AN parallels.</p>
+<p>EĀ 9.9-10 are not without their own loss, however. Each appears to have suffered a lacuna, or unfortunate abbreviation, that omitted the conclusion of the initial “one thing” statement. When we reach the end of these <em>sūtra</em>s, however, we find that the “one thing” appears to be distraction (亂想) and focused thought (專意), which generally agrees in meaning with “improper” (P. <em>ayoniso</em>) and “proper attention” (P. <em>yoniso manasi</em>) in the conclusions of AN 1.11-20. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>becomes distracted</em>. C. 作亂想. Lit. “make distracting perceptions” or “ideas.” The expression functions the same as English “to become distracted.” Technically, it means straying from the perceptions that are the subjects of the contemplation of impurity. In those moments of distraction, the five hindrances can arise or become stronger like a hunter catching his prey unaware, as the old Buddhist metaphor goes. This would appear to be a preparation for <em>dhyāna</em> meditation since the goal is to supress the five hindrances. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved of it.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 3 March 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.11-20" target="_blank">AN 1.11-15</a>, but in AN it has been divided into five <em>sutta</em>s, one for each hindrance. It may be that EĀ 9.9-10 and AN 1.11-20 are later divisions of an older <em>sūtra</em> in the same way that EĀ 9.7-8 and AN 1.1-10 appear to divide a single <em>sūtra</em> like T792.<br/>
-In AN 1.11-20, each <em>sutta</em> identifies a particular reason (P. <em>nimitta</em>) for a hindrance to arise or cease. EĀ 9.9-10 instead address all five hindrances in the context of contemplating the impurities, suggesting that the specific context of the hindrances being impediments to <em>samādhi</em> has been lost in the AN parallels.<br/>
-EĀ 9.9-10 are not without their own loss, however. Each appears to have suffered a lacuna, or unfortunate abbreviation, that omitted the conclusion of the initial “one thing” statement. When we reach the end of these <em>sūtra</em>s, however, we find that the “one thing” appears to be distraction (亂想) and focused thought (專意), which generally agrees in meaning with “improper” (P. <em>ayoniso</em>) and “proper attention” (P. <em>yoniso manasi</em>) in the conclusions of AN 1.11-20. [\[back\]](#ref1)
-2. {:#n2} *becomes distracted*. C. 作亂想. Lit. “make distracting perceptions” or “ideas.” The expression functions the same as English “to become distracted.” Technically, it means straying from the perceptions that are the subjects of the contemplation of impurity. In those moments of distraction, the five hindrances can arise or become stronger like a hunter catching his prey unaware, as the old Buddhist metaphor goes. This would appear to be a preparation for *dhyāna* meditation since the goal is to suppress the five hindrances. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 20 March 2023
-{: .revised}
-
----
+<hr/>
