--- a/01_agama/ekottarika/09/EA_09_10.md
+++ b/01_agama/ekottarika/09/EA_09_10.md
@@ -1,50 +1,69 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 10. Notions of Desire (2)'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 10. Notions of Desire (2)'
 type: kramdown
 base: ../../../
 previous: EA_09_09.html
 next: ../10/EA_10_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 10. Notions of Desire (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 欲想</th>
+  <th class='en'>10. Notions of Desire (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.563b23'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b24'>爾時，世尊告諸比丘： 「我於此法中不見一法未有欲想便不生欲想，已生欲想便能滅之 ⋯未生瞋恚想便不生，已生瞋恚想便能滅之 ⋯未生睡眠想便不生，已生睡眠想便能滅之 ⋯未生調戲想便不生，已生調戲想便能滅之 ⋯未生疑想便不生，已生疑想便能滅之⋯</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “In this assembly, I don’t see a single thing that doesn’t produce notions of desire that have yet to exist and that ceases notions of desire that have arisen  … that doesn’t produce notions of anger that have yet to exist and that ceases notions of anger that have arisen  … that doesn’t produce notions of sleepiness that have yet to exist and that ceases notions of sleepiness that have arisen  … that doesn’t produce notions of agitation that have yet to exist and that ceases notions of agitation that have arisen  … that doesn’t produce notions of doubt that have yet to exist and that ceases notions of doubt that have arisen …<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c1'>「亦當觀惡露不淨。 已觀惡露不淨，未生欲想便不生，已生便能滅之 ⋯未生瞋恚便不生，已生瞋恚便能滅之 ⋯乃至 ⋯疑未生疑想便不生，已生疑想便能滅之。</td>
+    <td id='p3'>3. “One should contemplate the foul discharges and perceptions of impurity. After contemplating them, notions of desire that have yet to arise won’t arise, and notions of desire that have arisen can cease … notions of anger that have yet to arise won’t arise, and notions of anger that have arisen can cease … [sleepiness … agitation] … notions of doubt that have yet to arise won’t arise, and notions of doubt that have arisen can cease.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c5'>「是故，諸比丘，常當專意觀不淨想。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, keep your thinking focused and don’t become distracted. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c6'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.563c8'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.563c8'><ul class='verse'>
+    <li class='ch'>二斯及二心，<br/>
+    一墮一生天，<br/>
+    男女想受樂，<br/>
+    二欲想在後。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Two laywomen, two on mind,<br/>
+    One on downfall, one on birth in Heaven,<br/>
+    Perceptions that delight men and women,<br/>
+    Two on notions of desire are last.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “In this assembly, I don’t see a single thing that doesn’t produce notions of desire that have yet to exist and that ceases notions of desire that have arisen  … that doesn’t produce notions of anger that have yet to exist and that ceases notions of anger that have arisen  … that doesn’t produce notions of sleepiness that have yet to exist and that ceases notions of sleepiness that have arisen  … that doesn’t produce notions of agitation that have yet to exist and that ceases notions of agitation that have arisen  … that doesn’t produce notions of doubt that have yet to exist and that ceases notions of doubt that have arisen …[\[2\]](#n2){:#ref2}
-{:#p2}
+<hr/>
 
-3\. “One should contemplate the foul discharges and perceptions of impurity. After contemplating them, notions of desire that have yet to arise won’t arise, and notions of desire that have arisen can cease … notions of anger that have yet to arise won’t arise, and notions of anger that have arisen can cease … [sleepiness … agitation] … notions of doubt that have yet to arise won’t arise, and notions of doubt that have arisen can cease.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, keep your thinking focused and don’t become distracted. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0563b23" target="_blank">T125.2.563b23-c9</a>. This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.11-20" target="_blank">AN 1.16-20</a>. Most of the observations made in the notes to <a href="EA_09_09.html#n1" target="_blank">EĀ 9.9</a> apply equally to this <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>As with EĀ 9.9, this statement is left incomplete, but the one thing is most likely “focused thinking” in this case, as evidenced by the conclusion of the <em>sūtra</em>. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 20 March 2023</p>
 
-##### Summary Verse
-
-* {:.verse}Two laywomen, two on mind,\\
-One on downfall, one on birth in Heaven,\\
-Perceptions that delight men and women,\\
-Two on notions of desire are last.
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to [AN 1.16-20](https://www.suttacentral.net/an1.11-20){:target="_blank"}. Most of the observations made in the notes to [EĀ 9.9](EA_09_09.html#n1){:target="_blank"} apply equally to this <em>sūtra</em>. [\[back\]](#ref1)
-2. {:#n2} As with EĀ 9.9, this statement is left incomplete, but the one thing is most likely “focused thinking” in this case, as evidenced by the conclusion of the <em>sūtra</em>. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 20 March 2023
-{: .revised}
-
----
+<hr/>
