--- a/01_agama/ekottarika/10/EA_10_01.md
+++ b/01_agama/ekottarika/10/EA_10_01.md
@@ -1,57 +1,77 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 1. No Pride'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 1. No Pride'
 type: kramdown
-base: ../../../ 
+base: ../../../
 previous: ../09/EA_09_10.html
 next: EA_10_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 1. No Pride
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一) 無慢</th>
+  <th class='en'>1. No Pride</th>
+  <tr>
+    <td class='ch' title='T125.2.563c11'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c12'>爾時，世尊告諸比丘： 「當修行一法、當廣布一法。 修行一法、廣布一法已，便得神通，諸行寂靜，得沙門果，至泥洹界。 云何為一法？ 所謂無放逸行。 云何為無放逸行？ 所謂護心也。 云何護心？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>.<sup id="ref2"><a href="#n2">2</a></sup> What’s that one thing? It’s the practice of carefulness. What is the practice of carefulness? It’s guarding the mind. And what is guarding the mind?</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c16'>「於是，比丘常守護心有漏、有漏法。 當彼守護心有漏、有漏法，於有漏法便得悦豫。 亦有信樂，住不移易，恒專其意，自力勸勉。</td>
+    <td id='p3'>3. “Here, a monk always guards his mind against being contaminated and contaminating things. When he guards his mind against being contaminated and contaminating things, then he’ll feel comfortable around contaminating things. He’ll also become confident, remain unmoved, keep his thinking focused, and encourage himself.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c19'>「如是，比丘，彼無放逸行恒自謹愼。 未生欲漏便不生，已生欲漏便能使滅。 未生有漏便不生，已生有漏便能使滅。 未生無明漏便不生，已生無明漏便能使滅。</td>
+    <td id='p4'>4. “Thus, monks, his practice is careful and he’s always cautious with himself. Then, the contaminants of desire that have yet to arise don’t arise, and the contaminants of desire that have arisen can cease. The contaminants of existence that have yet to arise don’t arise, and the contaminants of existence that have arisen can cease. The contaminants of ignorance that have yet to arise don’t arise, and the contaminants of ignorance that have arisen can cease.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c23'>「比丘，於彼無放逸行，閑靜一處，恒自覺知，而自遊戲。 欲漏心便得解脫，有漏心、無明漏心便得解脫。 已得解脫，便得解脫智： 『生死已盡，梵行已立，所作已辦。 更不復受有，如實知之。』」</td>
+    <td id='p5'>5. While practicing that carefulness, a monk secludes himself in a quiet place, and he’s constantly aware of himself and explores himself. He’s freed from thoughts contaminated by desire and freed from thoughts contaminated by existence and ignorance. Once he’s freed from them, he attains knowledge of that liberation: ‘Birth and death has been ended, the religious life has been established, and the task has been accomplished. I truly know that I won’t be subject to another existence.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563c27'>爾時，世尊便説斯偈：</td>
+    <td id='p6'>6. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.563c28'><ul class='verse'>
+    <li class='ch'>「無憍甘露跡；<br/>
+    放逸是死徑。<br/>
+    無慢則不死，<br/>
+    慢者即是死。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“The path of sweet dew lacks pride;<br/>
+    Carelessness is the road of death.<br/>
+    Without pride, one doesn’t die,<br/>
+    While the prideful do die.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.564a1'>「是故，諸比丘，當念修行無放逸行。 如是，諸比丘，當作是學。」</td>
+    <td id='p7'>7. “Therefore, monks, one must mindfully cultivate the practice of carefulness. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a2'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p8'>8. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>.[\[2\]](#n2){:#ref2} What’s that one thing? It’s the practice of carefulness. What is the practice of carefulness? It’s guarding the mind. And what is guarding the mind?
-{:#p2}
+<hr/>
 
-3\. “Here, a monk always guards his mind against being contaminated and contaminating things. When he guards his mind against being contaminated and contaminating things, then he’ll feel comfortable around contaminating things. He’ll also become confident, remain unmoved, keep his thinking focused, and encourage himself.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Thus, monks, his practice is careful and he’s always cautious with himself. Then, the contaminants of desire that have yet to arise don’t arise, and the contaminants of desire that have arisen can cease. The contaminants of existence that have yet to arise don’t arise, and the contaminants of existence that have arisen can cease. The contaminants of ignorance that have yet to arise don’t arise, and the contaminants of ignorance that have arisen can cease.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0563c11" target="_blank">T125.2.563c11-29</a>. This <em>sūtra</em> and the next are similar to <a href="https://www.suttacentral.net/iti23" target="_blank">Iti 23</a>, but the Pali <em>sutta</em> includes less context. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>cultivate one thing … realm of</em> nirvāṇa. This passage is nearly verbatim the passage found in the introductions of <a href="../02/EA_02_01.html" target="_blank">EĀ 2.1-10</a>. The main variation is that “dispel their confused ideas” (去眾亂想) has been replaced with “pacify their conditioned thinking” (諸行寂靜), and the “abode of <em>nirvāṇa</em>” has become the “realm of <em>nirvāṇa</em>” (S. <em>nirvāṇadhātu</em>). The former is repeated in the next <em>sūtra</em>, but the latter appears spurious. I’ve translated 諸行 with the prior passage in mind as “conditioned thinking” since it seems to be a synomym of “confused ideas” (亂想). Another possibility is that it refers to modes of conduct (e.g., mental, verbal, and physical). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. While practicing that carefulness, a monk secludes himself in a quiet place, and he’s constantly aware of himself and explores himself. He’s freed from thoughts contaminated by desire and freed from thoughts contaminated by existence and ignorance. Once he’s freed from them, he attains knowledge of that liberation: ‘Birth and death has been ended, the religious life has been established, and the task has been accomplished. I truly know that I won’t be subject to another existence.’”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 20 March 2023</p>
 
-6\. The Bhagavān then spoke in verse:
-{:#p6}
-
-* {:.verse}“The path of sweet dew lacks pride;\\
-Carelessness is the road of death.\\
-Without pride, one doesn’t die,\\
-While the prideful do die.
-
-7\. “Therefore, monks, one must mindfully cultivate the practice of carefulness. Thus, monks, you should train yourselves.”
-{:#p7}
-
-8\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p8}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> and the next are similar to [Iti 23](https://www.suttacentral.net/iti23), but the Pali *sutta* includes less context. [\[back\]](#ref1)
-2. {:#n2} *cultivate one thing … realm of nirvāṇa*. This passage is nearly verbatim the passage found in the introductions of [EĀ 2.1-10](../02/EA_02_01.html){:target="_blank"}. The main variation is that “dispel their confused ideas” (去衆亂想) has been replaced with “pacify their conditioned thinking” (諸行寂靜), and the “abode of Nirvāṇa” has become the “realm of Nirvāṇa” (S. *nirvāṇadhātu*). The former is repeated in the next <em>sūtra</em>, but the latter appears spurious. I’ve translated 諸行 with the prior passage in mind as “conditioned thinking” since it seems to be a synomym of “confused ideas” (亂想). Another possibility is that it refers to modes of conduct (e.g., mental, verbal, and physical). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 20 March 2023
-{: .revised}
-
----
+<hr/>
