--- a/01_agama/ekottarika/10/EA_10_02.md
+++ b/01_agama/ekottarika/10/EA_10_02.md
@@ -1,50 +1,69 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 2. No Pride (2)'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 2. No Pride (2)'
 type: kramdown
 base: ../../../
 previous: EA_10_01.html
 next: EA_10_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 2. No Pride (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二) 無慢</th>
+  <th class='en'>2. No Pride (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.564a4'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a5'>爾時世尊告諸比丘： 「當修行一法當廣布一法。 修行一法、廣布一法已，便得神通，諸行寂靜，得沙門果，至泥洹處。 云何為一法？ 謂無放逸行於諸善法。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One must develop one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll then attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>. What’s that one thing? It’s the practice of carefulness in the good teachings.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a8'>「云何無放逸行？ 所謂不觸嬈一切眾生，不害一切眾生，不惱一切眾生。 是謂無放逸行。 彼云何名善法？ 所謂賢聖八道品，等見、等方便、等語、等行、等命、等治、等念、等定。 是謂善法。」</td>
+    <td id='p3'>3. “What is this practice of carefulness? It means not harassing any sentient being, not harming any sentient being, and not troubling any sentient being. This is called the practice of carefulness. What’s called the good teachings? It means the noble eightfold path, which is right view, right method, right speech, right action, right livelihood, right suppression, right mindfulness, and right <em>samādhi</em>.<sup id="ref2"><a href="#n2">2</a></sup> These are the good teachings.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a12'>爾時，世尊便説偈曰：</td>
+    <td id='p4'>4. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.564a14'><ul class='verse'>
+    <li class='ch'>「施一切眾生，<br/>
+    不如法施人。<br/>
+    雖施眾生福，<br/>
+    一人法施勝。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Being generous to all sentient beings<br/>
+    Is not the same as giving Dharma to someone.<br/>
+    Although being generous has its merit,<br/>
+    Giving Dharma to one person is greater.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.564a16'>「是故，諸比丘，當修行善法。如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Therefore, monks, one should cultivate the good teaching. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a17'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p6'>6. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One must develop one thing and disseminate one thing. Having cultivated one thing and disseminated one thing, they’ll then attain spiritual knowledge, pacify their conditioned thinking, attain the fruits of the ascetic, and reach the abode of <em>nirvāṇa</em>. What’s that one thing? It’s the practice of carefulness in the good teachings.
-{:#p2}
+<hr/>
 
-3\. “What is this practice of carefulness? It means not harassing any sentient being, not harming any sentient being, and not troubling any sentient being. This is called the practice of carefulness. What’s called the good teachings? It means the noble eightfold path, which is right view, right method, right speech, right action, right livelihood, right discipline, right mindfulness, and right samādhi.[\[1\]](#n1){:#ref1} These are the good teachings.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The Bhagavān then spoke in verse:
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0564a04" target="_blank">T125.2.564a4-17</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>right view … right samādhi</em>. C. 等見⋯等定. The C. lit. reads “equal” rather than “right” in this <em>sūtra</em>. This is likely because of confusion in G. between S. <em>samyak</em> and S. <em>sama</em>, which perhaps led to ambiguous readings in that language. There are also a couple less standard translations of “intention” and “effort,” which are rendered here as “method” (方便) and “discipline” (治). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}“Being generous to all sentient beings\\
-Is not the same as giving Dharma to someone.\\
-Although being generous has its merit,\\
-Giving Dharma to one person is greater.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 20 March 2023</p>
 
-5\. “Therefore, monks, one should cultivate the good teaching. Thus, monks, you should train yourselves.”
-{:#p5}
-
-6\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p6}
-
----
-
-### Notes
-
-1. {:#n1} *right view … right samādhi*. C. 等見⋯等定. The C. lit. reads “equal” rather than “right” in this <em>samādhi</em>. This is likely because of confusion in G. between S. *samyak* and S. *sama*, which perhaps led to ambiguous readings in that language. There are also a couple less standard translations of “intention” and “effort,” which are rendered here as “method” (方便) and “discipline” (治). [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 20 March 2023
-{: .revised}
-
----
+<hr/>
