--- a/01_agama/ekottarika/10/EA_10_03.md
+++ b/01_agama/ekottarika/10/EA_10_03.md
@@ -1,80 +1,138 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 3. Recollecting Generosity'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 3. Recollecting Generosity'
 type: kramdown
-base: ..\..\..\
+base: ../../../
 previous: EA_10_02.html
 next: EA_10_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 3. Recollecting Generosity
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三) 念壇</th>
+  <th class='en'>3. Recollecting Generosity</th>
+  <tr>
+    <td class='ch' title='T125.2.564a18'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a19'>爾時，世尊告諸比丘： 「當云何觀檀越、施主？」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “How should one investigate donors and almsgivers?”<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a20'>爾時，諸比丘白世尊曰： 「世尊是諸法之王。 唯願，世尊，與諸比丘而説此義。 聞已，盡當奉持。」</td>
+    <td>The monks said to the Bhagavān, “The Bhagavān is the king of teachings! Please, Bhagavān, teach the monks about the meaning of this. Once we’ve heard it, the monks will approve of it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a22'>爾時，世尊告諸比丘： 「諦聽，諦聽！善思念之。 我當與汝分別其義。」</td>
+    <td id='p3'>3. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a23'>對曰： 「如是，世尊。」 爾時，諸比丘從佛受教。</td>
+    <td>They replied, “Yes, Bhagavān!” The monks then accepted the teaching from the Bhagavān.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a24'>世尊告曰： 「檀越、施主當恭敬如子孝順父母，養之侍之。 長益五陰，於閻浮利地現種種義。 觀檀越主能成人戒、聞、三昧、智慧。 諸比丘，多所饒益，於三寶中無所罣礙，能施卿等衣被、飮食、床榻、臥具、病痩醫藥。</td>
+    <td id='p4'>4. The Bhagavān told them, “A donor or almsgiver should be respectful like a devoted son who supports and helps his parents. Increasing the five aggregates, he manifests various aims in this land of Jambudvīpa.<sup id="ref3"><a href="#n3">3</a></sup> Examine a donor’s ability to achieve human precepts, learning, samādhi, and wisdom. Monks, many are the benefits of the Three Jewels when they have no obstructions for those who can give you clothing, meals, furnishings, lodging, and medicine for illnesses.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564a29'>「是故，諸比丘，當有慈心於檀越所。 小恩常不忘，況復大者。 恒以慈心向彼檀越，説身、口、意清淨之行，不可稱量亦無有限。 身行慈、口行慈、意行慈使彼檀越所施之物終不唐捐。 獲其大果，成大福祐，有大名稱流聞世間、甘露法味。 如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Therefore, monks, one should have kind thoughts towards a donor. Never forget small favors, not to mention the large ones. Always be kind to those donors and teach them pure conduct in body, speech, and thought, which cannot be estimated or delimited. Kindness in physical action, kindness in verbal action, and kindness in mental action ensures that the gifts that donors give will never be fruitless. They will obtain great fruit, achieve great fortune, and possess great fame that’s heard throughout the world and that has the Dharma flavor of sweet dew. Thus, you monks should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564b6'>爾時，世尊便説偈曰：</td>
+    <td id='p6'>6. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.564b8'><ul class='verse'>
+    <li class='ch'>「施以成大財，<br/>
+    所願亦成就。<br/>
+    王及諸賊盜<br/>
+    不能侵彼物。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Generosity achieves great riches,<br/>
+    And it accomplishes one’s wishes, too.<br/>
+    Neither the king nor bandits<br/>
+    Can take that away from you.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.564b10'><ul class='verse'>
+    <li class='ch'>施以得王位<br/>
+    紹繼轉輪處。<br/>
+    七寶具足成<br/>
+    本施之所致。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Generosity gains the royal status<br/>
+    In a line of noble wheel-turning kings.<br/>
+    Being replete with the seven treasures<br/>
+    Is the result of past generosity.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.564a12'><ul class='verse'>
+    <li class='ch'>布施成天身，<br/>
+    首著雜寶冠<br/>
+    與諸妓女遊。<br/>
+    本施之果報。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Generosity achieves a god’s body,<br/>
+    Wearing a crown of various jewels<br/>
+    And roaming with a harem of women.<br/>
+    That’s a reward of past generosity.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.564a14'><ul class='verse'>
+    <li class='ch'>施得天帝釋。<br/>
+    天王威力盛，<br/>
+    千眼莊嚴形。<br/>
+    本施之果報。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>A donor becomes Śakra the Lord of Gods.<br/>
+    That god king’s authority is abundant,<br/>
+    And he’s adorned with a thousand eyes.<br/>
+    That’s a reward of past generosity.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.564b16'><ul class='verse'>
+    <li class='ch'>布施成佛道。<br/>
+    三十二相具，<br/>
+    轉無上法輪。<br/>
+    本施之果報。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Generosity achieves the Buddha’s path.<br/>
+    Endowed with the thirty-two signs,<br/>
+    They turn the unsurpassed Dharma wheel.<br/>
+    That’s a reward of past generosity.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.564b18'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p7'>7. When the monks heard what the Buddha taught, they rejoiced and approved. </td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “How should one investigate donors and almsgivers?”[\[1\]](#n1){:#ref1}
-{:#p2}
+<hr/>
 
-The monks said to the Bhagavān, “The Bhagavān is the king of teachings! Please, Bhagavān, teach the monks about the meaning of this. Once we’ve heard it, the monks will approve of it.”
+<h3 id="notes">Notes</h3>
 
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0564a18" target="_blank">T125.2.564a18-b18</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>donors and almsgivers</em>. C. 檀越、施主. These two terms are synonyms that can both translate S. <em>dānapati</em>, which means a lay supporter who makes donations to the Saṅgha. I’ve chosen a couple equivalent English expressions. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Jambudvīpa</em>. C. 閻浮利. The C. transliterates something like Jambuliva or Jamburiva (without the final syllable). Standard G. would be Jaṃbudiva, but EĀ frequently converts <em>-d-</em> to <em>-l-</em> or <em>-r-</em>. C. speakers had difficulty distinguishing the two sounds, so it’s difficult to tell which. Brough (p. 96) notes that <em>-d-</em> and <em>-r-</em> do appear interchangeable in some G. texts. I’ve adopted the S. equivalent. [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-3\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”
-{:#p3}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 March 2023</p>
 
-They replied, “Yes, Bhagavān!” The monks then accepted the teaching from the Bhagavān.
-
-
-4\. The Bhagavān told them, “A donor or almsgiver should be respectful like a devoted son who supports and helps his parents. Increasing the five aggregates, he manifests various aims in this land of Jambudvīpa.[\[2\]](#n2){:#ref2} Examine a donor’s ability to achieve human precepts, learning, samādhi, and wisdom. Monks, many are the benefits of the Three Jewels when they have no obstructions for those who can give you clothing, meals, furnishings, lodging, and medicine for illnesses.
-{:#p4}
-
-5\. “Therefore, monks, one should have kind thoughts towards a donor. Never forget small favors, not to mention the large ones. Always be kind to those donors and teach them pure conduct in body, speech, and thought, which cannot be estimated or delimited. Kindness in physical action, kindness in verbal action, and kindness in mental action ensures that the gifts that donors give will never be fruitless. They will obtain great fruit, achieve great fortune, and possess great fame that’s heard throughout the world and that has the Dharma flavor of sweet dew. Thus, you monks should train yourselves.”
-{:#p5}
-
-6\. The Bhagavān then spoke in verse:
-{:#p6}
-
-* {:.verse}“Generosity achieves great riches,\\
-And it accomplishes one’s wishes, too.\\
-Neither the king nor bandits\\
-Can take that away from you.
-
-* {:.verse}Generosity gains the royal status\\
-In a line of noble wheel-turning kings.\\
-Being replete with the seven treasures\\
-Is the result of past generosity.
-
-* {:.verse}Generosity achieves a god’s body,\\
-Wearing a crown of various jewels\\
-And roaming with a harem of women.\\
-That’s a reward of past generosity.
-
-* {:.verse}A donor becomes Śakra the Lord of Gods.\\
-That god king’s authority is abundant,\\
-And he’s adorned with a thousand eyes.\\
-That’s a reward of past generosity.
-
-* {:.verse}Generosity achieves the Buddha’s path.\\
-Endowed with the thirty-two signs,\\
-They turn the unsurpassed Dharma wheel.\\
-That’s a reward of past generosity.”
-
-7\. When the monks heard what the Buddha taught, they rejoiced and approved. 
-{:#p7}
-
----
-
-### Notes
-
-1. {:#n1} *donors and almsgivers*. C. 檀越、施主. These two terms are synonyms that can both translate S. *dānapati*, which means a lay supporter who makes donations to the Saṅgha. I’ve chosen a couple equivalent English expressions. [\[back\]](#ref1)
-2. {:#n2} *Jambudvīpa*. C. 閻浮利. The C. transliterates something like Jambuliva or Jamburiva (without the final syllable). Standard G. would be Jaṃbudiva, but EĀ frequently converts *-d-* to *-l-* or *-r-*. C. speakers had difficulty distinguishing the two sounds, so it’s difficult to tell which. Brough (p. 96) notes that *-d-* and *-r-* do appear interchangeable in some G. texts. I’ve adopted the S. equivalent. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 23 March 2023
-{: .revised}
-
----
+<hr/>
