--- a/01_agama/ekottarika/10/EA_10_04.md
+++ b/01_agama/ekottarika/10/EA_10_04.md
@@ -1,94 +1,120 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 4. Generosity'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 4. Generosity'
 type: kramdown
 base: ../../../
 previous: EA_10_03.html
 next: EA_10_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 4. Generosity
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 施</th>
+  <th class='en'>4. Generosity</th>
+  <tr>
+    <td class='ch' title='T125.2.564b19'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564b20'>爾時，世尊告諸比丘： 「檀越、施主當云何承事、供養精進、持戒諸賢聖人。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “What services and gifts should donors and almsgivers provide to diligent noble people who observe the precepts?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564b21'>爾時，諸比丘白世尊曰： 「世尊是諸法之王！ 唯願，世尊，與諸比丘而説此義。 盡當奉持。」</td>
+    <td id='p3'>3. The monks then said to the Bhagavān, “The Bhagavān is the king of teachings! Please, Bhagavān, teach the monks about the meaning of this. Once we’ve heard it, the monks will approve of it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564b23'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之。 我當與汝分別其義。」</td>
+    <td>The Bhagavān told the monks, “Listen closely! Listen closely and consider it well. I will discern the meaning of this for you.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564b25'>對曰： 「如是，世尊。」 爾時，諸比丘從佛受教。</td>
+    <td>They replied, “Yes, Bhagavān!” The monks then accepted the teaching from the Buddha.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564b26'>世尊告曰： 「檀越、施主承事、供養精進、持戒諸多聞者猶如與迷者指示其路。 糧食乏短而給施食。 恐怖之人令無憂惱。 驚畏者教令莫懼。 無所歸者與作覆護。 盲者作眼目，與病作醫王。</td>
+    <td id='p4'>4. The Bhagavān told them, “A donor or almsgiver who renders services and gives offerings to diligent and learned people who observe the precepts is like someone who shows the way to the lost. They’re like someone who provides meals to those in need of food. They’re like someone who puts anxious people at ease. They’re like someone who instructs the fearful to not be afraid. They’re like someone who gives shelter to those without refuge. They’re like someone who serves as eyes for the blind or a king of medicine for the sick.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c1'>「猶如田家農夫修治田業。 除去穢草便能成就穀食。 比丘常當除棄五盛陰病，求入無畏泥洹城中。 如是，諸比丘，檀越施主承事、供養精進、持戒諸多聞者當施。」</td>
+    <td id='p5'>5. “They’re like a farmer cultivating their land. They remove debris and weeds so that they can harvest their crop. A monk must constantly abandon the illness of the five proliferating aggregates as he seeks to enter the city of <em>nirvāṇa</em> fearlessly. Thus, monks, should a donor or almsgiver be generous when providing services and offerings to diligent and learned people who observe the precepts.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c5'>爾時，阿那邠持長者集在彼眾。 爾時，長者阿那邠持白世尊曰： 「如是，世尊！如是，如來！ 一切施主及與受者猶吉祥瓶。 諸受施人如毘沙王。 勸人行施如親父母。 受施之人是後世良祐。 一切施主及與受者猶如居士。」</td>
+    <td id='p6'>6. The wealthy man Anāthapiṇḍada<sup id="ref2"><a href="#n2">2</a></sup> was in the audience at the time. He then said to the Bhagavān, “So it is, Bhagavān! So it is, Tathāgata! All donors and their recipients are like auspicious vases. Those who accept their donations are like King Vaiśravaṇa. They encourage people to practice generosity like a friend or parent. A person who accepts donations will have excellent fortune in the next life. All donors and their recipients are like householders.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c10'>世尊告曰： 「如是，長者。 如汝所言。」</td>
+    <td>The Bhagavān told him, “So it is, wealthy man. It’s as you say.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c10'>阿那邠持長者白世尊曰： 「自今已後門不安守亦不拒逆比丘、比丘尼、優婆塞、優婆斯及諸行路乏糧食者。」</td>
+    <td id='p7'>7. The wealthy man Anāthapiṇḍada said to the Bhagavān, “From now on, my door won’t be guarded, nor will monks, nuns, laymen, laywomen, or travelers be refused who are in need of a meal.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c13'>爾時，阿那邠持長者白世尊曰： 「唯願，世尊及比丘眾受弟子請。」</td>
+    <td id='p8'>8. Anāthapiṇḍada then said to the Bhagavān, “Please let the Bhagavān and the assembly of monks accept a disciple’s invitation.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c14'>爾時，世尊默然受長者請。</td>
+    <td>The Bhagavān then silently accepted that wealthy man’s invitation.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c15'>爾時，長者見世尊默然受請，即禮佛三匝還歸所在。 到舍已，即其夜辦具甘饌、種種飯食，廣敷坐具。 自白： 「時到，食具已辦。 唯願，世尊願時臨顧。」</td>
+    <td id='p9'>9. Seeing that the Bhagavān had silently accepted his invitation, that wealthy man then bowed to the Buddha, circled him three times, and returned to his home. Arriving at his house, he prepared a variety of sweet delicacies for the evening and arranged for a sitting area. He then sent word, “When you arrive, the meal will be fully prepared. Please let the Bhagavān come when it’s convenient.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c18'>爾時，世尊將諸比丘眾，著衣，持鉢，詣舍衞城，至長者家。 到已，各自就座，諸比丘僧亦各隨次坐。</td>
+    <td id='p10'>10. The Bhagavān then led the assembly of monks, putting on his robes and taking his bowl to that wealthy man’s household in Śrāvastī. When they arrived, he prepared his own seat, and the assembly of monks each seated themselves in their order.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c21'>爾時，長者見佛、比丘眾坐定，手自斟酌行種種飮食。 以行種種飮食，各收鉢坐。 更取卑座，在如來前，欲聽聞法。</td>
+    <td id='p11'>11. Seeing that the Buddha and assembly of monks were seated and settled, the wealthy man then served them a variety of foods with his own hands. As he gave out those various meals, they each took a bowl and sat. He then brought out a humble chair and sat in front of the Buddha hoping to hear the Dharma.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c23'>爾時，長者白世尊言： 「善哉，如來聽諸比丘隨所須物，三衣、鉢、盂鍼、筒、尼師壇、衣帶、法澡罐、及餘一切沙門雜物。 盡聽弟子家取之。</td>
+    <td id='p12'>12. That wealthy man then said to the Bhagavān, “It’d be good if the Tathāgata permitted the monks to have the things that they need, such as three robes, a bowl, needle, tube, sitting mat, filter cloth, water basin, and the rest of an ascetic’s items. Permit them all to get these things from my family.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c26'>爾時，世尊告諸比丘： 「汝等若須衣裳、鉢器、及尼師壇、法澡罐、及餘一切沙門雜物，聽使此取。 勿足疑、難起想著心。」</td>
+    <td id='p13'>13. The Bhagavān then addressed the monks, “If you need robes, bowls, sitting mats, water basins, or any other items of an ascetic, you may get them here. Don’t hesitate or make excuses about attachment.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.564c29'>爾時，世尊與長者阿那邠持説微妙之法。 説妙法已，便從坐起而去。</td>
+    <td id='p14'>14. Then, the Bhagavān and Anāthapiṇḍada had a discussion about the sublime Dharma. After discussing the sublime Dharma, the Buddha rose from his seat and departed.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a2'>當於爾時，阿那邠持復於四城門而廣惠施，第五市中，第六在家。 須食與食，須漿與漿。 須車乘、妓樂、香熏、瓔珞悉皆與之。</td>
+    <td id='p15'>15. At a later time, Anāthapiṇḍada gave out gifts broadly at each of the city’s four gates, a fifth in the market, and a sixth at his home. He gave food if people needed food and drink if drink was needed. He provided to everyone what carts, music, incense, and jewelry that they needed.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a5'>爾時，世尊聞長者阿那邠持於四城門中廣作惠施，復於大市布施貧乏，復於家内布施無量。</td>
+    <td id='p16'>16. The Bhagavān heard about Anāthapiṇḍada giving out gifts broadly at the city’s four gates, that he had also given to the needy in the marketplace, and that he again gave measureless gifts from inside his own home.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a7'>爾時，世尊告諸比丘： 「我弟子中，第一優婆塞好喜布施所謂須達長者是。」</td>
+    <td id='p17'>17. The Bhagavān then told the monks, “Among my disciples, the layman who delights most in charity is that wealthy man Sudatta.”<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a8'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p18'>18. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “What services and gifts should donors and almsgivers provide to diligent noble people who observe the precepts?”
-{:#p2}
+<hr/>
 
-3\. The monks then said to the Bhagavān, “The Bhagavān is the king of teachings! Please, Bhagavān, teach the monks about the meaning of this. Once we’ve heard it, the monks will approve of it.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-The Bhagavān told the monks, “Listen closely! Listen closely and consider it well. I will discern the meaning of this for you.”
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0564b19" target="_blank">T125.2.564b19-5a9</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Anāthapiṇḍada</em>. C. 阿那邠持 (EMC. •a-na-pɪĕn-ḍɪei = G. <em>*Ana’piṃḍi > Anasapiṃḍiga</em>), P. Anāthapiṇḍika, S. Anāthapiṇḍada. This is the famous wealthy benefactor of the Buddha who gave park land in the Jetavana to the Saṅgha. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Sudatta</em>. C. 須達 (EMC. siu-dat = G. <em>Sudat[a]</em>). This was Anāthapiṇḍada’s given name. “Anāthapiṇḍada” was a title earned from his philantrophy, which lit. means “the patron of orphans.” [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 2 April 2023</p>
 
-They replied, “Yes, Bhagavān!” The monks then accepted the teaching from the Buddha.
-
-
-4\. The Bhagavān told them, “A donor or almsgiver who renders services and gives offerings to diligent and learned people who observe the precepts is like someone who shows the way to the lost. They’re like someone who provides meals to those in need of food. They’re like someone who puts anxious people at ease. They’re like someone who instructs the fearful to not be afraid. They’re like someone who gives shelter to those without refuge. They’re like someone who serves as eyes for the blind or a king of medicine for the sick.
-{:#p4}
-
-5\. “They’re like a farmer cultivating their land. They remove debris and weeds so that they can harvest their crop. A monk must constantly abandon the illness of the five proliferating aggregates as he seeks to enter the city of <em>nirvāṇa</em> fearlessly. Thus, monks, should a donor or almsgiver be generous when providing services and offerings to diligent and learned people who observe the precepts.”
-{:#p5}
-
-6\. The wealthy man Anāthapiṇḍada[\[1\]](#n1){:#ref1} was in the audience at the time. He then said to the Bhagavān, “So it is, Bhagavān! So it is, Tathāgata! All donors and their recipients are like auspicious vases. Those who accept their donations are like King Vaiśravaṇa. They encourage people to practice generosity like a friend or parent. A person who accepts donations will have excellent fortune in the next life. All donors and their recipients are like householders.”
-{:#p6}
-
-The Bhagavān told him, “So it is, wealthy man. It’s as you say.”
-
-
-7\. The wealthy man Anāthapiṇḍada said to the Bhagavān, “From now on, my door won’t be guarded, nor will monks, nuns, laymen, laywomen, or travelers be refused who are in need of a meal.”
-{:#p7}
-
-8\. Anāthapiṇḍada then said to the Bhagavān, “Please let the Bhagavān and the assembly of monks accept a disciple’s invitation.”
-{:#p8}
-
-The Bhagavān then silently accepted that wealthy man’s invitation.
-
-
-9\. Seeing that the Bhagavān had silently accepted his invitation, that wealthy man then bowed to the Buddha, circled him three times, and returned to his home. Arriving at his house, he prepared a variety of sweet delicacies for the evening and arranged for a sitting area. He then sent word, “When you arrive, the meal will be fully prepared. Please let the Bhagavān come when it’s convenient.”
-{:#p9}
-
-10\. The Bhagavān then led the assembly of monks, putting on his robes and taking his bowl to that wealthy man’s household in Śrāvastī. When they arrived, he prepared his own seat, and the assembly of monks each seated themselves in their order.
-{:#p10}
-
-11\. Seeing that the Buddha and assembly of monks were seated and settled, the wealthy man then served them a variety of foods with his own hands. As he gave out those various meals, they each took a bowl and sat. He then brought out a humble chair and sat in front of the Buddha hoping to hear the Dharma.
-{:#p11}
-
-12\. That wealthy man then said to the Bhagavān, “It’d be good if the Tathāgata permitted the monks to have the things that they need, such as three robes, a bowl, needle, tube, sitting mat, filter cloth, water basin, and the rest of an ascetic’s items. Permit them all to get these things from my family.”
-{:#p12}
-
-13\. The Bhagavān then addressed the monks, “If you need robes, bowls, sitting mats, water basins, or any other items of an ascetic, you may get them here. Don’t hesitate or make excuses about attachment.”
-{:#p13}
-
-14\. Then, the Bhagavān and Anāthapiṇḍada had a discussion about the sublime Dharma. After discussing the sublime Dharma, the Buddha rose from his seat and departed.
-{:#p14}
-
-15\. At a later time, Anāthapiṇḍada gave out gifts broadly at each of the city’s four gates, a fifth in the market, and a sixth at his home. He gave food if people needed food and drink if drink was needed. He provided to everyone what carts, music, incense, and jewelry that they needed.
-{:#p15}
-
-16\. The Bhagavān heard about Anāthapiṇḍada giving out gifts broadly at the city’s four gates, that he had also given to the needy in the marketplace, and that he again gave measureless gifts from inside his own home.
-{:#p16}
-
-17\. The Bhagavān then told the monks, “Among my disciples, the layman who delights most in charity is that wealthy man Sudatta.”[\[2\]](#n2){:#ref2}
-{:#p17}
-
-18\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p18}
-
----
-
-### Notes
-
-1. {:#n1} *Anāthapiṇḍada*. C. 阿那邠持 (EMC. •a-na-pɪĕn-ḍɪei = G. *Ana’piṃḍi > Anasapiṃḍiga), P. Anāthapiṇḍika, S. Anāthapiṇḍada. This is the famous wealthy benefactor of the Buddha who gave park land in the Jetavana to the Saṅgha. [\[back\]](#ref1)
-2. {:#n2} *Sudatta*. C. 須達 (EMC. siu-dat = G. *Sudat[a]). This was Anāthapiṇḍada’s given name. “Anāthapiṇḍada” was a title earned from his philantrophy, which lit. means “the patron of orphans.” [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 April 2023
-{: .revised}
-
----
+<hr/>
