--- a/01_agama/ekottarika/10/EA_10_05.md
+++ b/01_agama/ekottarika/10/EA_10_05.md
@@ -1,62 +1,85 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 5. Generosity (2)'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 5. Generosity (2)'
 type: kramdown
 base: ../../../
 previous: EA_10_04.html
 next: EA_10_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 5. Generosity (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 施</th>
+  <th class='en'>5. Generosity (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.565a10'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a11'>爾時，阿那邠持長者便往至世尊所。 頭面禮世尊足，在一面坐。</td>
+    <td id='p2'>2. It was then that the wealthy man Anāthapiṇḍada went to visit the Bhagavān. He bowed his head at the Bhagavān’s feet and then sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a12'>世尊告曰： 「云何長者？ 貴家恒布施貧乏耶？」</td>
+    <td id='p3'>3. The Bhagavān asked him, “How are you, wealthy man? Has your rich family continued to give to the needy?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a13'>長者對曰： 「如是，世尊。 恒布施貧乏。 於四城門而廣布施，復在家中給與所須。</td>
+    <td id='p4'>4. That wealthy man replied, “Yes, Bhagavān. We continue to give to the needy. We distribute gifts at the city’s four gates, and I also provide what they need from my home.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a15'>「世尊，我或時作是念： 『并欲布施野飛鳥、猪、狗之屬。』 我亦無是念： 『此應與。』『此不應與。』 亦復無是念： 『此應與多。』『此應與少。』 我恒有是念： 『一切眾生皆由食而存其命。 有食便存；無食便喪。』</td>
+    <td id='p5'>5. “Bhagavān, sometimes I think, ‘I’d like to be generous to the likes of wild birds, pigs, and dogs.’ But I don’t have this thought, ‘I should give to them,’ or ‘I shouldn’t give to them.’ Nor do I have the thought, ‘I should give more to them,’ or ‘I should give less to them.’ I always think, ‘All sentient beings depend on food to continue to live.<sup id="ref2"><a href="#n2">2</a></sup> With food, they survive. Without food, they die.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a19'>世尊告曰： 「善哉！善哉！ 長者，汝乃以菩薩心專精一意而廣惠施。 然，此眾生由食得濟。 無食，便喪。</td>
+    <td id='p6'>6. The Bhagavān told him, “Good, wealthy man! Good! You focus on this one thought of giving widely with a bodhisattva’s heart. Indeed, these sentient beings depend on food for their survival. Without food, they die.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a22'>「長者，汝當獲大果，得大名稱有大果報。 聲徹十方，得甘露法味。 所以然者？ 菩薩之處恒以平等心而以惠施。 專精一意念眾生類由食而存。 有食便濟；無食便喪。 是謂長者菩薩心所安處而廣惠施。」</td>
+    <td id='p7'>7. “Wealthy man, you’ll win a great reward and get a great reputation for that great reward. Your name will travel in all directions, and you’ll gain the Dharma flavor of the sweet dew. Why is that? The bodhisattva’s abode is to give with an equitable heart. He focuses on this one thought, being mindful of the varieties of sentient beings that depend on food to live. With food, they survive. Without food, they die. This, wealthy man, is called a bodhisattva whose heart abides securely and gives broadly.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565a26'>爾時，世尊便説偈曰：</td>
+    <td id='p8'>8. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.565a28'><ul class='verse'>
+    <li class='ch'>「盡當普惠施<br/>
+    終無悋悔心。<br/>
+    必當遇良友<br/>
+    得濟到彼岸。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>All should focus on broad generosity<br/>
+    And never feel any regret about it.<br/>
+    They’ll surely encounter good friends<br/>
+    Who’ll help them cross over to the far shore.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.565b1'>「是故，長者，當平等意而廣惠施。 如是，長者，當作是學。」</td>
+    <td id='p9'>9. “Therefore, wealthy man, you should think equitably and focus on broad generosity. Thus, wealthy man, you should train yourself.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565b2'>爾時，長者聞佛所説歡喜，奉行。</td>
+    <td id='p10'>10. When that wealthy man heard what the Buddha taught, he rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the wealthy man Anāthapiṇḍada went to visit the Bhagavān. He bowed his head at the Bhagavān’s feet and then sat to one side.
-{:#p2}
+<hr/>
 
-3\. The Bhagavān asked him, “How are you, wealthy man? Has your rich family continued to give to the needy?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. That wealthy man replied, “Yes, Bhagavān. We continue to give to the needy. We distribute gifts at the city’s four gates, and I also provide what they need from my home.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0565a10" target="_blank">T125.2.565a10-b3</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>All sentient beings depend on food to continue to live</em>. This famous saying was enshrined in the early <cite>Saṅgiti Sūtra</cite>, as it’s found in all extant versions as the core item of the Ones section, but direct commentaries on its meaning are difficult to find. Here, it serves as the reason for developing a broader sense of generosity for all living things, not just monks and nuns. It also appears to draw inspiration from the bodhisattva’s perfection of giving, as we’ll see below. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Bhagavān, sometimes I think, ‘I’d like to be generous to the likes of wild birds, pigs, and dogs.’ But I don’t have this thought, ‘I should give to them,’ or ‘I shouldn’t give to them.’ Nor do I have the thought, ‘I should give more to them,’ or ‘I should give less to them.’ I always think, ‘All sentient beings depend on food to continue to live.[\[1\]](#n1){:#ref1} With food, they survive. Without food, they die.’”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 2 April 2023</p>
 
-6\. The Bhagavān told him, “Good, wealthy man! Good! You focus on this one thought of giving widely with a bodhisattva’s heart. Indeed, these sentient beings depend on food for their survival. Without food, they die.
-{:#p6}
-
-7\. “Wealthy man, you’ll win a great reward and get a great reputation for that great reward. Your name will travel in all directions, and you’ll gain the Dharma flavor of the sweet dew. Why is that? The bodhisattva’s abode is to give with an equitable heart. He focuses on this one thought, being mindful of the varieties of sentient beings that depend on food to live. With food, they survive. Without food, they die. This, wealthy man, is called a bodhisattva whose heart abides securely and gives broadly.”
-{:#p7}
-
-8\. The Bhagavān then spoke in verse:
-{:#p8}
-
-* {:.verse}All should focus on broad generosity\\
-And never feel any regret about it.\\
-They’ll surely encounter good friends\\
-Who’ll help them cross over to the far shore.
-
-9\. “Therefore, wealthy man, you should think equitably and focus on broad generosity. Thus, wealthy man, you should train yourself.”
-{:#p9}
-
-10\. When that wealthy man heard what the Buddha taught, he rejoiced and approved.
-{:#p10}
-
----
-
-### Notes
-
-1. {:#n1} *All sentient beings depend on food to continue to live*. This famous saying was enshrined in the early *Saṅgiti Sūtra*, as it’s found in all extant versions as the core item of the Ones section, but direct commentaries on its meaning are difficult to find. Here, it serves as the reason for developing a broader sense of generosity for all living things, not just monks and nuns. It also appears to draw inspiration from the bodhisattva’s perfection of giving, as we’ll see below. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 April 2023
-{: .revised}
-
----
+<hr/>
