--- a/01_agama/ekottarika/10/EA_10_06.md
+++ b/01_agama/ekottarika/10/EA_10_06.md
@@ -1,64 +1,116 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 6. The Stingy and the Tireless'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 6. The Stingy and the Tireless'
 type: kramdown
 base: ../../../
 previous: EA_10_05.html
 next: EA_10_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 6. The Stingy and the Tireless
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 慳、無厭</th>
+  <th class='en'>6. The Stingy and the Tireless</th>
+  <tr>
+    <td class='ch' title='T125.2.565b4'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565b5'>爾時，世尊告諸比丘： 「如我今日審知眾生根原所趣，亦知布施之報。 最後一摶之餘已，不自食惠施他人。 爾時，不起憎嫉之心，如毛髮許。 以此眾生不知施之果報，如我皆悉知之。 施之果報平等之報心無有異。 是故，眾生不能平等施而自墮落。 恒有慳嫉之心纒裹心意。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Just as I know now the source of the destinies of sentient beings, I also know the rewards of generosity. Even the last lump of food that one doesn’t eat themselves should be given to someone else. Then, they won’t allow themselves to have even a hair’s breadth of stinginess. These sentient beings don’t know the rewards of generosity like I know them in their entirety. They are no different than the rewards of an equitable heart. Therefore, sentient beings who aren’t capable of equitable generosity bring their own downfalls. Their minds are constantly wrapped in stingy thoughts.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565b11'>爾時，世尊便説偈曰：</td>
+    <td id='p3'>3. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.565b12'><ul class='verse'>
+    <li class='ch'>「眾生不自覺，<br/>
+    如來之言教：<br/>
+    常當普惠施，<br/>
+    專向真人所。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Sentient beings don’t realize it themselves,<br/>
+    But this is what the Tathāgata teaches:<br/>
+    One should always be generous to all<br/>
+    And focus on becoming a true man.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.565b14'><ul class='verse'>
+    <li class='ch'>志性以清淨，<br/>
+    所獲福倍多。<br/>
+    等共分其福，<br/>
+    後得大果報。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>When their inclinations are purified,<br/>
+    The merits gained are multiplied many times.<br/>
+    Sharing equal parts of their merit,<br/>
+    They later obtain a great reward.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.565b16'><ul class='verse'>
+    <li class='ch'>所施今善哉！<br/>
+    心向廣福田。<br/>
+    於此人間逝，<br/>
+    必生於天上。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>What they give in the present is good!<br/>
+    Their hearts head for a broad field of merit.<br/>
+    They depart from among humans,<br/>
+    Sure to be born up in Heaven.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.565b18'><ul class='verse'>
+    <li class='ch'>以到彼善處，<br/>
+    快樂自娯樂。<br/>
+    吉祥甚歡悦，<br/>
+    一切無乏短。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>By reaching that good place,<br/>
+    They’ll enjoy their own happiness.<br/>
+    They’ll rejoice over their good fortune,<br/>
+    And won’t be in want of anything.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.565b20'><ul class='verse'>
+    <li class='ch'>以天威徳業，<br/>
+    玉女為營從。<br/>
+    平等之施報，<br/>
+    故獲此福祐。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>With heavenly authority and deeds,<br/>
+    Beautiful women will be their followers.<br/>
+    The rewards of equitable giving,<br/>
+    Therefore, obtain these fortunes.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.565b22'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Just as I know now the source of the destinies of sentient beings, I also know the rewards of generosity. Even the last lump of food that one doesn’t eat themselves should be given to someone else. Then, they won’t allow themselves to have even a hair’s breadth of stinginess. These sentient beings don’t know the rewards of generosity like I know them in their entirety. They are no different than the rewards of an equitable heart. Therefore, sentient beings who aren’t capable of equitable generosity bring their own downfalls. Their minds are constantly wrapped in stingy thoughts.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Sentient beings don’t realize it themselves,\\
-But this is what the Tathāgata teaches:\\
-One should always be generous to all\\
-And focus on becoming a true man.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0565b04" target="_blank">T125.2.565b4-22</a>. This <em>sūtra</em> is similar to <a href="https://suttacentral.net/iti26" target="_blank">Iti 26</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
+ 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 27 March 2023</p>
 
-* {:.verse}When their inclinations are purified,\\
-The merits gained are multiplied many times.\\
-Sharing equal parts of their merit,\\
-They later obtain a great reward.
-
-* {:.verse}What they give in the present is good!\\
-Their hearts head for a broad field of merit.\\
-They depart from among humans,\\
-Sure to be born up in Heaven.
-
-* {:.verse}By reaching that good place,\\
-They’ll enjoy their own happiness.\\
-They’ll rejoice over their good fortune,\\
-And won’t be in want of anything.
-
-* {:.verse}With heavenly authority and deeds,\\
-Beautiful women will be their followers.\\
-The rewards of equitable giving,\\
-Therefore, obtain these fortunes.”
-
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to [Iti 26](https://suttacentral.net/iti26){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 27 March 2023
-{: .revised}
-
----
+<hr/>
