--- a/01_agama/ekottarika/10/EA_10_07.md
+++ b/01_agama/ekottarika/10/EA_10_07.md
@@ -1,63 +1,100 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 7. Merits of Generosity'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 7. Merits of Generosity'
 type: kramdown
 base: ../../../
 previous: EA_10_06.html
 next: EA_10_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 7. Merits of Generosity
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 施福</th>
+  <th class='en'>7. Merits of Generosity</th>
+  <tr>
+    <td class='ch' title='T125.2.565b23'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565b24'>爾時，世尊告諸比丘： 「汝等莫畏福報。 所以然者？ 此是受樂之應甚可愛、敬。 所以名為『福』者有此大報。 汝等當畏無福。 所以然者？ 此名苦之原本。 愁、憂、苦、惱不可稱記，無有愛樂，此名『無福』。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Don’t be afraid of the rewards of merit. Why is that? It gets pleasures that should be desirable and respectable. The reason it’s called ‘merit’ is that it has great rewards. What you should fear is having no merit. Why is that? That’s the name for the source of suffering. Indescribable sorrow, lamentation, pain, and trouble and the lack of desirable pleasure is called ‘having no merit.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565b28'>「比丘，昔我自念七年行慈心。 復過，七劫不來此世。 復於七劫中，生光音天。 復於七劫，生空梵天處，為大梵天。 無與等者統百千世界。 三十六反，為天帝釋形。 無數世，為轉輪王。</td>
+    <td id='p3'>3. “Monks, I recall in the past I had practiced kindness for seven years. After that, I didn’t return to this world for seven eons. During those seven eons, I was born in the Ābhāsvara Heaven. I was born in an empty Brahma Heaven as the god Mahābrahmā during those seven eons. I was the unmatched ruler of a hundred thousand worlds. I was reborn thirty-six times as Śakra the Lord of Gods. I also became a noble wheel-turning king countless times.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c3'>「是故，諸比丘，作福莫惓。 所以然者？ 此名受樂之應甚可愛、敬。 是謂名為『福』。 汝等當畏無福。 所以然者？ 苦之原本。 愁、憂、苦、惱不可稱記，此名『無福』。」</td>
+    <td id='p4'>4. “Therefore, monks, don’t be cautious about making merit. Why is that? This is called getting pleasures that should be very desirable and respectable. This is the reason it’s called ‘merit.’ What you should fear is having no merit. Why is that? That’s the source of suffering. Indescribable sorrow, lamentation, pain, and trouble is called ‘having no merit.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c7'>爾時，世尊便説此偈：</td>
+    <td id='p5'>5. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.565c8'><ul class='verse'>
+    <li class='ch'>「快哉福報，<br/>
+    所願者得。<br/>
+    速至滅盡；<br/>
+    到無為處。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Happy are the rewards of merit,<br/>
+    And obtaining what one wishes.<br/>
+    Go quickly to complete extinguishment;<br/>
+    Arrive at the unconditioned state.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.565c9'><ul class='verse'>
+    <li class='ch'>正使億數<br/>
+    天魔波旬，<br/>
+    亦不能嬈<br/>
+    為福業者。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Even if the schemer<br/>
+    Were the god Māra the Wicked One,<br/>
+    He couldn’t cause trouble for<br/>
+    Someone whose works make merit.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.565c10'><ul class='verse'>
+    <li class='ch'>彼恒自求<br/>
+    賢聖之道，<br/>
+    便盡除苦，<br/>
+    後無有憂。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Always seek for oneself<br/>
+    The path of noble people,<br/>
+    And then suffering will be completely ended,<br/>
+    And afterward there’s no more sorrow.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.565c12'>「是故，諸比丘，為福莫厭。 是故，諸比丘，當作是學。」</td>
+    <td id='p6'>6. “Therefore, monks, don’t reject making merit. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c13'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p7'>7. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Don’t be afraid of the rewards of merit. Why is that? It gets pleasures that should be desirable and respectable. The reason it’s called ‘merit’ is that it has great rewards. What you should fear is having no merit. Why is that? That’s the name for the source of suffering. Indescribable sorrow, lamentation, pain, and trouble and the lack of desirable pleasure is called ‘having no merit.’
-{:#p2}
+<hr/>
 
-3\. “Monks, I recall in the past I had practiced kindness for seven years. After that, I didn’t return to this world for seven eons. During those seven eons, I was born in the Ābhāsvara Heaven. I was born in an empty Brahma Heaven as the god Mahābrahmā during those seven eons. I was the unmatched ruler of a hundred thousand worlds. I was reborn thirty-six times as Śakra the Lord of Gods. I also became a noble wheel-turning king countless times.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Therefore, monks, don’t be cautious about making merit. Why is that? This is called getting pleasures that should be very desirable and respectable. This is the reason it’s called ‘merit.’ What you should fear is having no merit. Why is that? That’s the source of suffering. Indescribable sorrow, lamentation, pain, and trouble is called ‘having no merit.’”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0565b23" target="_blank">T125.2.565b23-c13</a>. This <em>sūtra</em> is very similar to <a href="https://suttacentral.net/iti22" target="_blank">Iti 22</a> and <a href="https://suttacentral.net/an7.62" target="_blank">AN 7.62</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then spoke in verse:
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 27 March 2023</p>
 
-* {:.verse}“Happy are the rewards of merit,\\
-And obtaining what one wishes.\\
-Go quickly to complete extinguishment;\\
-Arrive at the unconditioned state.
-
-* {:.verse}Even if the schemer\\
-Were the god Māra the Wicked One,\\
-He couldn’t cause trouble for\\
-Someone whose works make merit.
-
-* {:.verse}Always seek for oneself\\
-The path of noble people,\\
-And then suffering will be completely ended,\\
-And afterward there’s no more sorrow.
-
-6\. “Therefore, monks, don’t reject making merit. Thus, monks, you should train yourselves.”
-{:#p6}
-
-7\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p7}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is very similar to [Iti 22](https://suttacentral.net/iti22){:target="_blank"} and <a href="https://suttacentral.net/an7.62" target="_blank">AN 7.62</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 27 March 2023
-{: .revised}
-
----
+<hr/>
