--- a/01_agama/ekottarika/10/EA_10_08.md
+++ b/01_agama/ekottarika/10/EA_10_08.md
@@ -1,56 +1,77 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 8. Māra the Wicked One'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 8. Māra the Wicked One'
 type: kramdown
 base: ../../../
 previous: EA_10_07.html
 next: EA_10_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 8. Māra the Wicked One
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八) 魔波旬</th>
+  <th class='en'>8. Māra the Wicked One</th>
+  <tr>
+    <td class='ch' title='T125.2.565c14'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c15'>爾時，世尊告諸比丘： 「若有承順一法，不離一法，魔波旬不能得其便。 亦不能來觸嬈人。 云何為一法？ 謂功徳福業。 所以然者？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone accepts one thing and doesn’t part with one thing, then Māra the Wicked One won’t be able to get an advantage over them. He won’t be able to come and harass them, either. What is that one thing? It’s virtuous, meritorious deeds. Why is that?</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c18'>「自憶往昔在道樹下，與諸菩薩集在一處。 弊魔波旬將諸兵眾數千萬億。 種種形貎獸頭、人身不可稱計。 天、龍、鬼神、阿須倫、迦留羅、摩休勒等皆來運集。</td>
+    <td id='p3'>3. “I recall in the past when I was sitting under the tree of awakening with the bodhisattvas who had gathered in one place. Deceitful Māra the Wicked One led an army numbering in the hundreds of thousands of millions. His soldiers had all sorts of indescribable forms with animal heads and human bodies. The gods, <em>nāga</em>s, <em>yakṣa</em>s, <em>asura</em>s, <em>garuḍa</em>s, and <em>mahoraga</em>s all came and assembled.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c21'>「時，魔波旬而語我言： 『沙門，速投于地。』 佛以福、徳、大力降伏魔怨。 諸塵垢消、無有諸穢，便成無上、正真道。</td>
+    <td id='p4'>4. “Māra the Wicked One then said to me, ‘Ascetic, I’ll quickly throw you to the ground!’ But the Buddha defeated that Māra foe with merit, virtue, and great power. His impurities being extinguished and having no defilement, he then achieved the unsurpassed and true awakening.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c24'>「諸比丘，當觀此義。 其有比丘功徳具足者，弊魔波旬不能得其便，壞其功徳。」</td>
+    <td id='p5'>5. “Monks, one should contemplate the meaning of this. Deceitful Māra the Wicked One can’t find an advantage over a monk who has perfected his virtue, nor can he ruin his virtue.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c25'>爾時，世尊便説此偈：</td>
+    <td id='p6'>6. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.565c27'><ul class='verse'>
+    <li class='ch'>有福快樂；<br/>
+    無福者苦。<br/>
+    今世後世，<br/>
+    為福受樂。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Someone with merits is happy;<br/>
+    Someone lacking merits will suffer.<br/>
+    In this life and the next,<br/>
+    Making merit brings happiness.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.565c29'>「是故，諸比丘，為福莫惓。」</td>
+    <td id='p7'>7. “Therefore, monks, don’t be cautious about making merit. [Thus, monks, you should train yourselves.]”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.565c29'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p8'>8. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If someone accepts one thing and doesn’t part with one thing, then Māra the Wicked One won’t be able to get an advantage over them. He won’t be able to come and harass them, either. What is that one thing? It’s virtuous, meritorious deeds. Why is that?
-{:#p2}
+<hr/>
 
-3\. “I recall in the past when I was sitting under the tree of awakening with the bodhisattvas who had gathered in one place. Deceitful Māra the Wicked One led an army numbering in the hundreds of thousands of millions. His soldiers had all sorts of indescribable forms with animal heads and human bodies. The gods, <em>nāga</em>s, <em>yakṣa</em>s, <em>asura</em>s, <em>garuḍa</em>s, and <em>mahoraga</em>s all came and assembled.[\[1\]](#n1){:#ref1}
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Māra the Wicked One then said to me, ‘Ascetic, I’ll quickly throw you to the ground!’ But the Buddha defeated that Māra foe with merit, virtue, and great power. His impurities being extinguished and having no defilement, he then achieved the unsurpassed and true awakening.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0565c14" target="_blank">T125.2.565c14-6a1</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>This scene sounds very much like the one we find in the later biographical epics like the <em>Lalitavistara</em> and <em>Buddhacarita</em>, though it includes more details in common with the former than the later. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Monks, one should contemplate the meaning of this. Deceitful Māra the Wicked One can’t find an advantage over a monk who has perfected his virtue, nor can he ruin his virtue.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 2 April 2023</p>
 
-6\. The Bhagavān then spoke in verse:
-{:#p6}
-
-* {:.verse}“Someone with merits is happy;\\
-Someone lacking merits will suffer.\\
-In this life and the next,\\
-Making merit brings happiness.
-
-7\. “Therefore, monks, don’t be cautious about making merit. [Thus, monks, you should train yourselves.]”
-{:#p7}
-
-8\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p8}
-
----
-
-### Notes
-
-1. {:#n1} This scene sounds very much like the one we find in the later biographical epics like the <em>Lalitavistara</em> and <em>Buddhacarita</em>, though it includes more details in common with the former than the later. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 April 2023
-{: .revised}
-
----
+<hr/>
