--- a/01_agama/ekottarika/10/EA_10_10.md
+++ b/01_agama/ekottarika/10/EA_10_10.md
@@ -1,40 +1,64 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 10. One Person'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 10. One Person'
 type: kramdown
 base: ../../../
 previous: EA_10_09.html
 next: ../11/EA_11_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 10. One Person
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 一人</th>
+  <th class='en'>10. One Person</th>
+  <tr>
+    <td class='ch' title='T125.2.566a13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a14'>爾時，世尊告諸比丘： 「若有一人出現於世，此眾生類便増壽益算，顏色光潤，氣力熾盛，快樂無極，音聲和雅。 云何為一人？ 所謂如來、至真、等正覺。 此謂一人出現於世，此眾生類便増壽益算，顏色光潤，氣力熾盛，快樂無極，音聲和雅。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, it increases the life spans of sentient beings and makes their complexions brighter, their health more vigorous, their happiness unsurpassed, and their voices gentle. Who is that one person? It’s the Tathāgata, the Arhat, and the Completely Awakened One. He is that one person who appears in the world and increases the life spans of sentient beings and makes their complexions brighter, their health more vigorous, their happiness unsurpassed, and their voices gentle.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a19'>「是故，諸比丘，常當專精、一心念佛。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, always focus and unify your mind on recollecting the Buddha. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a20'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.566a22'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.566a22'><ul class='verse'>
+    <li class='ch'>無慢二，念壇，<br/>
+    二施，堅無厭，<br/>
+    施福，魔波旬，<br/>
+    惡趣，及一人。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Two on no pride, recollecting generosity,<br/>
+    Two on giving, the stingy and the tireless,<br/>
+    Merits of giving, Māra the Wicked One,<br/>
+    Bad destinies, and one person.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one person appears in the world, it increases the life spans of sentient beings and makes their complexions brighter, their health more vigorous, their happiness unsurpassed, and their voices gentle. Who is that one person? It’s the Tathāgata, the Arhat, and the Completely Awakened One. He is that one person who appears in the world and increases the life spans of sentient beings and makes their complexions brighter, their health more vigorous, their happiness unsurpassed, and their voices gentle.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, always focus and unify your mind on recollecting the Buddha. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566a13" target="_blank">T125.2.566a13-23</a>. [<a href="#ref1">back</a>]</p> </li>
+</ol>
+<hr/>
 
-##### Summary Verse
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 2 April 2023</p>
 
-* {:.verse}Two on no pride, recollecting generosity,\\
-Two on giving, the stingy and the tireless,\\
-Merits of giving, Māra the Wicked One,\\
-Bad destinies, and one person.
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 April 2023
-{: .revised}
-
----
+<hr/>
