--- a/01_agama/ekottarika/16/EA_16_04.md
+++ b/01_agama/ekottarika/16/EA_16_04.md
@@ -80,7 +80,7 @@ next: EA_16_05.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0579b21" target="_blank">T125.2.579b21-80a15</a>. There is a partial parallel for this <em>sūtra</em> in <a href="https://suttacentral.net/an3.82" target="_target">AN 3.82</a>, which recounts a parable of a donkey that insists that it’s a cow. A close parallel to AN 3.82 also occurs at SĀ 15.16 (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0212b18" target="_blank">T99.2.212b18</a>).</p> [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0579b21" target="_blank">T125.2.579b21-80a15</a>. There is a partial parallel for this <em>sūtra</em> in <a href="https://suttacentral.net/an3.82" target="_target">AN 3.82</a>, which recounts a parable of a donkey that insists that it’s a cow. A close parallel to AN 3.82 also occurs at SĀ 15.16 (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0212b18" target="_blank">T99.2.212b18</a>). [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
