--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -162,7 +162,7 @@ next: MA_003.html
 <p>The first issue is that in MĀ there is confusion among the various official editions of the text about what the fourth character should be. There are three different versions that occur inconsistently throughout MĀ: The one that CBETA editors chose to adopt adds the word emptiness (<span class="ch">空</span>), resulting in the reading: “the noble ones teach the noble’s detachment, mindfulness, happy abiding, and emptiness” (<span class="ch">聖所説，聖所捨、念、樂住、空</span>). The other two readings end the passage instead with <span class="ch">定</span> (<em>samādhi</em>) or <span class="ch">室</span> (“abode”). Because these three characters are all similarly written, the inconsistencies between different passages are probably the result of typos made by copyists, and this calls into question which is correct. When we consult the versions in T1547, we find this reading: <span class="ch">聖說、捨、念、安樂遊處</span>. Here, <span class="ch">遊</span> (“wandering”) translates <em>viharati</em>, which is translated as <span class="ch">住</span> (“abiding”) in MĀ. <span class="ch">處</span> (“abode, place”) would also be equivalent to <span class="ch">室</span> (“room, abode”). This gives us concrete evidence that <span class="ch">室</span> is the correct reading in MĀ. Thus, my translation follows this conclusion.</p>
 <p>The second textual issue is that the <em>Dharmaskandha</em> version of this passage reads <span class="ch">聖說應捨</span> (“noble people teach that one should be detached”). This reading does not mention the mindfulness or happy abiding found in all the other versions of the third meditation. The commentary explains this expression in this way: The noble ones “discern, reveal, and encourage those cultivating <em>samādhi</em> that they should be detached from its happiness and not indulge in it. They should only abide detached with right mindfulness and right knowledge.” Thus, the interpretation is essentially the same as what we find in T1547.</p>
 <p><em>they accomplish and dwell in the third meditation.</em> C. <span class="ch">得第三禪成就遊</span>, P. <em>tatiyaṁ jhānaṁ upasampajja viharati</em>, S. <em>tṛtīyaṃ dhyānam upasaṃpadya viharati</em>. The conclusion of this third stage of meditation is interpreted in the same way as it was for the previous two stages. This third meditation is analyzed as consisting of five factors: Right mindfulness, right knowledge, personally experienced happiness, and one-pointedness of mind. The term meditation is defined in the same way as it was in the other meditations, describing a variety of cognitive activities involved with wisdom. [cf. <a href="https://cbetaonline.dila.edu.tw/zh/T26n1537_p0484b18" target="_blank">T1537.26.484b18-c16</a> and <a href="https://cbetaonline.dila.edu.tw/zh/T28n1547_p0489a08" target="_blank">T1547.28.489a8-b6</a>] [<a href="#ref10">back</a>]</p></li>
-<li id="n11"><p><em>fourth meditation.</em> C. <span class="ch">聖弟子樂滅，苦滅。喜、憂本已滅，不苦、不樂。捨、念、清淨，得第四禪成就遊</span>, P. <em>Sukhassa ca pahānā dukkhassa ca pahānā pubbeva somanassadomanassānaṁ atthaṅgamā adukkhamasukhaṁ upekkhāsatipārisuddhiṁ catutthaṁ jhānaṁ upasampajja viharati.</em>, S. <em>sa tatprārthayamānas taddhetos tatsaṃvartanīyaṃ sukhasya ca prahāṇād duḥkhasya ca prahāṇāt pūrvam eva ca saumanasyadaurmanasyayor astagamād aduḥkhāsukhaṃ upekṣāsmṛtipariśuddhaṃ caturthaṃ dhyānam upasaṃpadya viharati</em>. This fourth stage of meditation is the point at which the meditator has achieved an undisturbed <em>samadhi</em> after having dispensed with the joy and happiness that the initial entry had created. Detached from those positive reactions to it, they achieve a stable and clear <em>samadhi</em>.</p>
+<li id="n11"><p><em>fourth meditation.</em> C. <span class="ch">聖弟子樂滅，苦滅。喜、憂本已滅，不苦、不樂。捨、念、清淨，得第四禪成就遊</span>, P. <em>Sukhassa ca pahānā dukkhassa ca pahānā pubbeva somanassadomanassānaṁ atthaṅgamā adukkhamasukhaṁ upekkhāsatipārisuddhiṁ catutthaṁ jhānaṁ upasampajja viharati.</em>, S. <em>sa tatprārthayamānas taddhetos tatsaṃvartanīyaṃ sukhasya ca prahāṇād duḥkhasya ca prahāṇāt pūrvam eva ca saumanasyadaurmanasyayor astagamād aduḥkhāsukhaṃ upekṣāsmṛtipariśuddhaṃ caturthaṃ dhyānam upasaṃpadya viharati</em>. This fourth stage of meditation is the point at which the meditator has achieved an undisturbed <em>samādhi</em> after having dispensed with the joy and happiness that the initial entry had created. Detached from those positive reactions to it, they achieve a stable and clear <em>samādhi</em>.</p>
 <p>The descriptions of this fourth meditation are the same across different sources, setting aside the usual translation issues, so here I will cover mainly the <em>Dharmaskandha</em> commentary, turning to T1547 only where it adds more information.</p>
 <p><em>the noble disciple’s pleasure ceases and their pain ceases.</em> C. <span class="ch">聖弟子樂滅，苦滅</span>, P. <em>sukhassa ca pahānā dukkhassa ca pahānā</em>, S. <em>sukhasya ca prahāṇād duḥkhasya ca prahāṇāt</em>. The <em>Dharmaskandha</em> defines pleasure (<span class="ch">樂</span>) as physical and mental pleasure that arises from pleasant contact as well as the happiness experienced in the third meditation. It defines pain (<span class="ch">苦</span>) here as physical pain that arises from painful contact. This pleasure and pain are fully known to have ended. Both are far away, subdued, subsided, and disappeared.</p>
 <p>In T1547, the question is raised as to how there could be painful feelings after the bonds of the desire realm and the happiness of the third stage of meditation are gone. The answer given is that pain had already ceased prior to entering the fourth meditation. What the description is saying here is that the meditator becomes aware that they have achieved a cessation of both pleasure and pain, but they did not both cease at the same time. Other explanations are also cited. One is that the meditator realizes that the final end of pleasure and pain will happen in the future. Another explanation is that the happiness of the third meditation is painful in the sense that it is impermanent. A <em>sūtra</em> is quoted in which the Buddha tells the monks that pleasant feelings should be regarded as thorns and neutral feelings as poisonous snakes. Another <em>sūtra</em> passage is cited saying that breathing in and out is considered to be the most painful thing by a noble person, rather than pains of Hell that are considered the worst by ordinary people. This last point no doubt alludes to the cessation of breathing that’s often associated with the fourth meditation. We can see from this discussion in T1547 that this part of the description was understood in a variety of ways.</p>
