--- a/01_agama/samyukta/01/SA1_33.md
+++ b/01_agama/samyukta/01/SA1_33.md
@@ -31,7 +31,7 @@ next: SA1_34.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c24'>佛告比丘： 「諦聽，善思。 當為汝說。 比丘，於色向厭、離欲、滅盡是名法次法向。 如是受、想、行、識⋯於識向厭、離欲、滅盡是名法次法向。」</td>
-    <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain this for you. Monk, heading for disillusionment with form, becoming free of desire for it, and completely ceasing it is called going from one principle to the next. <em>It’s the same with feeling, conception, volition, awareness</em> … heading for disillusionment with awareness, becoming free of desire for it, and completely ceasing it is called going from one principle to the next.”</td>
+    <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain this for you. Monk, heading for disillusionment with form, becoming free of desire for it, and completely ceasing it is called going from one principle to the next. <em>It’s the same with feeling, conception, volition, and awareness</em> … heading for disillusionment with awareness, becoming free of desire for it, and completely ceasing it is called going from one principle to the next.”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c27'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
