--- a/01_agama/samyukta/01/SA1_34.md
+++ b/01_agama/samyukta/01/SA1_34.md
@@ -35,7 +35,7 @@ next: SA1_35.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a6'>佛告比丘： 「於色生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。 如是受、想、行、識⋯於識生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。」</td>
-    <td id='p4'>4. The Buddha told the monk, “Becoming disillusioned with form, becoming free of desire for it, and completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life. <em>It’s the same with feeling, conception, volition, awareness</em> … becoming disillusioned with awareness, becoming free of desire for it, completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life.”</td>
+    <td id='p4'>4. The Buddha told the monk, “Becoming disillusioned with form, becoming free of desire for it, and completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life. <em>It’s the same with feeling, conception, volition, and awareness</em> … becoming disillusioned with awareness, becoming free of desire for it, completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life.”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a10'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
