--- a/01_agama/ekottarika/09/EA_09_01.md
+++ b/01_agama/ekottarika/09/EA_09_01.md
@@ -1,53 +1,66 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 1. The Laywoman'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 1. The Laywoman'
 type: kramdown
 base: ../../../
 previous: ../08/EA_08_10.html
 next: EA_09_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 1. The Laywoman
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一) 優婆斯</th>
+  <th class='en'>1. The Laywoman</th>
+  <tr>
+    <td class='ch' title='T125.2.562a14'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a15'>爾時，世尊告諸比丘： 「猶如母人心懷篤信，唯有一子。 恒作是念： 『云何當教使成為人？』」</td>
+    <td>It was then that the Bhagavān addressed the monks, “Take the example of a mother who holds her only son dear and devotes herself to him. She often thinks, ‘How should I instruct him so that he’ll become a man?’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a17'>爾時，諸比丘白世尊曰： 「我等，世尊，不解此義。 世尊是諸法之本。 如來所陳靡不承受。 唯願，世尊，與諸比丘説此深法。 聞已，奉行。」</td>
+    <td>The monks then said, “Bhagavān, we don’t understand the meaning of this. The Bhagavān is the source of the teachings. The Tathāgata’s words are never unacceptable. Please, Bhagavān, give the monks a discourse about this profound principle. Having heard it, we’ll approve of it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a20'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之。 吾當為汝分別其義。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a21'>諸比丘對曰： 「如是，世尊。」 爾時，諸比丘從佛受教。</td>
+    <td>The monks replied, “Yes, Bhagavān.” Then, they accepted the teaching from the Buddha.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a22'>世尊告曰： 「猶彼優婆斯心懷、篤信，作是教訓： 『汝今在家，當如質多長者，亦如象童子。 所以然者？ 此是其限，此是其量。 世尊受證弟子，所謂質多長者、象童子也。』 若童子意欲剃除鬚髮，著三法衣，出家，學道，當如舍利弗、目犍連比丘。 所以然者？ 此是其限，此是其量，所謂舍利弗、目犍連比丘。</td>
+    <td>The Bhagavān told them, “That laywoman who holds her son dear and is devoted to him gives him this instruction, ‘While you’re living at home, you should be like the elder Citra or the youth Hastaka. Why is that? They are your standard; they are your measure. The Bhagavān accepted the realization of these disciples, the elder Citra and youth Hastaka.’ If that young man wants to cut off his hair and beard, put on the three Dharma robes, leave home, and train on the path, he should be like the monks Śāriputra or Maudgalyāyana. Why is that? Then, the monks Śāriputra and Maudgalyāyana would be his standard; they would be his measure.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a29'>「好學正法，莫作邪業，興起非法。 設汝生此染著之想，便當墜墮三惡趣中。 善念專心，不得者得，不獲者獲，未得證者今當受證。 所以然者？ 諸比丘，信施之重實不可消，令人不得至道。</td>
+    <td>“Love training in the correct Dharma, don’t do wrong deeds, and don’t be roused by what’s not Dharma. If you produce defiled ideas here, then you’ll fall into the three bad destinies. When you’re mindful and focused, you’ll attain what you haven’t attained, acquire what you haven’t acquired, and realize in the present what you have yet to realize. Why is that? Monks, the honor of a faithful gift that can’t actually be digested will prevent a person from attaining awakening.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562b4'>「是故，諸比丘，莫生染著之意。 已生，當滅。如是，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, don’t allow defiled ideas to arise. If they’ve already arisen, you must cease them. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562b6'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Take the example of a mother who holds her only son dear and devotes herself to him. She often thinks, ‘How should I instruct him so that he’ll become a man?’”
-{:#p2}
+<hr/>
 
-3\. The monks then said, “Bhagavān, we don’t understand the meaning of this. The Bhagavān is the source of the teachings. The Tathāgata’s words are never unacceptable. Please, Bhagavān, give the monks a discourse about this profound principle. Having heard it, we’ll approve of it.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0562a14" target="_blank">T125.2.562a14-b7</a>. This <em>sūtra</em> is parallel to <a href="https://www.suttacentral.net/sn17.23" target="_blank">SN 17.23</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-The monks replied, “Yes, Bhagavān.” Then, they accepted the teaching from the Buddha.
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-5\. The Bhagavān told them, “That laywoman who holds her son dear and is devoted to him gives him this instruction, ‘While you’re living at home, you should be like the elder Citra or the youth Hastaka. Why is that? They are your standard; they are your measure. The Bhagavān accepted the realization of these disciples, the elder Citra and youth Hastaka.’ If that young man wants to cut off his hair and beard, put on the three Dharma robes, leave home, and train on the path, he should be like the monks Śāriputra or Maudgalyāyana. Why is that? Then, the monks Śāriputra and Maudgalyāyana would be his standard; they would be his measure.
-{:#p5}
-
-6\. “Love training in the correct Dharma, don’t do wrong deeds, and don’t be roused by what’s not Dharma. If you produce defiled ideas here, then you’ll fall into the three bad destinies. When you’re mindful and focused, you’ll attain what you haven’t attained, acquire what you haven’t acquired, and realize in the present what you have yet to realize. Why is that? Monks, the honor of a faithful gift that can’t actually be digested will prevent a person from attaining awakening.
-{:#p6}
-
-7\. “Therefore, monks, don’t allow defiled ideas to arise. If they’ve already arisen, you must cease them. Thus, monks, you should train yourselves.”
-{:#p7}
-
-9\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel to [SN 17.23](https://www.suttacentral.net/sn17.23){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
