--- a/01_agama/ekottarika/09/EA_09_03.md
+++ b/01_agama/ekottarika/09/EA_09_03.md
@@ -1,39 +1,47 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 3. The Mind'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 3. The Mind'
 type: kramdown
 base: ../../../
 previous: EA_09_02.html
 next: EA_09_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 3. The Mind
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三) 心</th>
+  <th class='en'>3. The Mind</th>
+  <tr>
+    <td class='ch' title='T125.2.562c2'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c3'>爾時，世尊告諸比丘： 「我不見一法疾於心者。 無譬可喩。猶如獼猴捨一取一，心不專定。心亦如是。前想後想所不同者，以方便法不可摸，則心迴轉疾。 是故，諸比丘，凡夫之人不能觀察心意。</td>
+    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. It cannot be grasped without using the method of the Dharma, and then the mind spins around quickly.<sup id="ref2"><a href="#n2">2</a></sup> Therefore, monks, ordinary people are unable to observe their mind thinking.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c6'>「是故，諸比丘，常當降伏心意，令趣善道。亦當作是學。」</td>
+    <td>“Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562c8'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. It cannot be grasped without using the method of the Dharma, and then the mind spins around quickly.[\[1\]](#n1){:#ref1} Therefore, monks, ordinary people are unable to observe their mind thinking.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0562c02" target="_blank">T125.2.562c2-9</a>. This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.174" target="_blank">AN 1.174</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>Three editions of the Chinese omit a portion of this paragraph that contains the fmaous metaphor of a monkey picking up and dropping things. This metaphor is found in the next sūtra, and if we were to accept the Taisho edition, both sūtras would be nearly identical. It makes a bit more sense if this sūtra lacks the metaphor and the next sūtra adds it. I’ve therefore followed the older reading in my translation. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 September 2023</p>
 
-### Notes
-
-1. {:#n1} Three editions of the Chinese omit a portion of this paragraph that contains the fmaous metaphor of a monkey picking up and dropping things. This metaphor is found in the next sūtra, and if we were to accept the Taisho edition, both sūtras would be nearly identical. It makes a bit more sense if this sūtra lacks the metaphor and the next sūtra adds it. I’ve therefore followed the older reading in my translation. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
