--- a/01_agama/ekottarika/09/EA_09_07.md
+++ b/01_agama/ekottarika/09/EA_09_07.md
@@ -1,54 +1,80 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 7. A Man’s Perception'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 7. A Man’s Perception'
 type: kramdown
 base: ../../../
 previous: EA_09_06.html
 next: EA_09_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 7. A Man’s Perception
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 男想</th>
+  <th class='en'>7. A Man’s Perception</th>
+  <tr>
+    <td class='ch' title='T125.2.563a13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a14'>爾時，世尊告諸比丘： 「我於此眾中不見一法最勝、最妙，眩惑世人，不至永寂，縛著牢獄無有解已。 所謂男子見女色已，便起想著。 意甚愛敬令人不至永寂，縛著牢獄無有解已。 意不捨離，周旋往來。 今世、後世，迴轉五道，動歴劫數。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing in this assembly so supreme and sublime that prevents the benighted worldly person from reaching eternal peace and chains them in a prison where they have no freedom. That is, when a man sees a woman’s form, he becomes attached to the perceptions it produces. A man’s mind craves and esteems it so much that it prevents him from reaching eternal peace and chains him in a prison where he has no freedom. His mind won’t abandon it, and then he goes round and round being reborn. In this world and the next, he circulates among the five destinies for numerous eons.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a19'>爾時，世尊便説偈曰：</td>
+    <td>The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.563a20'><ul class='verse'>
+    <li class='ch'>「梵音柔軟聲，<br/>
+    如來説難見。<br/>
+    或復有時見，<br/>
+    繋念在目前。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“With Brahma’s gentle voice,<br/>
+    The Tathāgata says what’s hard to see.<br/>
+    Sometimes, when a man sees a woman,<br/>
+    His attention fixes to what’s before his eyes.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.563a22'><ul class='verse'>
+    <li class='ch'>亦莫與女人，<br/>
+    往來與言語。<br/>
+    恒羅伺捕人，<br/>
+    不得至無為。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>But don’t go with that woman,<br/>
+    For rebirth goes with her talk.<br/>
+    She hunts for a man with a net,<br/>
+    And keeps him from reaching the unconditioned.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.563a24'>「是故，諸比丘，當除諸色。莫起想著。 如是，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, one should abandon forms. Don’t become attached to the perceptions they produce. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a25'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see a single thing in this assembly so supreme and sublime that prevents the benighted worldly person from reaching eternal peace and chains them in a prison where they have no freedom. That is, when a man sees a woman’s form, he becomes attached to the perceptions it produces. A man’s mind craves and esteems it so much that it prevents him from reaching eternal peace and chains him in a prison where he has no freedom. His mind won’t abandon it, and then he goes round and round being reborn. In this world and the next, he circulates among the five destinies for numerous eons.”[\[2\]](#n2){:#ref2}
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“With Brahma’s gentle voice,\\
-The Tathāgata says what’s hard to see.\\
-Sometimes, when a man sees a woman,\\
-His attention fixes to what’s before his eyes.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0563a13" target="_blank">T125.2.563a13-26</a>. This <em>sūtra</em>’s content is parallel with <a href="https://www.suttacentral.net/an1.1-10" target="_target">AN 1.1-5</a> and the first half of T792.</p>
+<p>It’s notable that these parallels appear to be evidence of dividing a single <em>sūtra</em> about men and women’s attraction to each other’s forms (T792) into two (EĀ 9.7-8), and then ten (AN 1.1-10), smaller <em>sūtra</em>s. There appears to be little reason to do this other than to produce a larger number of <em>sūtra</em>s. This pattern reaches its logical extreme in AN, where some <em>sūtra</em>s appear to be divided into individual lines and phrases to produce whole <em>vagga</em>s at times. EĀ shows only minimal <em>sūtra</em> division by comparison. Mainly, pairs of <em>sūtra</em>s were created from individual <em>sūtra</em>s that juxtaposed two opposites or corollaries. This suggests that, <em>in general</em>, this version of EĀ represents an earlier stage of development than AN does, despite it’s inclusion of some later passages involving bodhisattvas. For more on the subject of multiplying <em>sūtra</em>s in AN and EĀ, cf. <a href="https://journal.equinoxpub.com/BSR/article/view/17527" target="_blank">Kuan and Bucknell</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>for numerous eons</em>. C. 動歴劫數. I suspect 動 (“to move, disturb”) is a typo for 更. Then, 更歷 (“to experience, undergo”) would make better sense in the passage. I’ve translated it assuming something to this effect was the case. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}But don’t go with that woman,\\
-For rebirth goes with her talk.\\
-She hunts for a man with a net,\\
-And keeps him from reaching the unconditioned.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 3 March 2023</p>
 
-4\. “Therefore, monks, one should abandon forms. Don’t become attached to the perceptions they produce. Thus, monks, you should train yourselves.”
-{:#p4}
-
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em>’s content is parallel with <a href="https://www.suttacentral.net/an1.1-10" target="_target">AN 1.1-5</a> and the first half of T792.<br/>
-It’s notable that these parallels appear to be evidence of dividing a single <em>sūtra</em> about men and women’s attraction to each other’s forms (T792) into two (EĀ 9.7-8), and then ten (AN 1.1-10), smaller <em>sūtra</em>s. There appears to be little reason to do this other than to produce a larger number of <em>sūtra</em>s. This pattern reaches its logical extreme in AN, where some <em>sūtra</em>s appear to be divided into individual lines and phrases to produce whole <em>vagga</em>s at times. EĀ shows only minimal <em>sūtra</em> division by comparison. Mainly, pairs of <em>sūtra</em>s were created from individual <em>sūtra</em>s that juxtaposed two opposites or corollaries. This suggests that, <em>in general</em>, this version of EĀ represents an earlier stage of development than AN does, despite it’s inclusion of some later passages involving bodhisattvas. For more on the subject of multiplying <em>sūtra</em>s in AN and EĀ, cf. <a href="https://journal.equinoxpub.com/BSR/article/view/17527" target="_blank">Kuan and Bucknell</a>. [\[back\]](#ref1)
-2. {:#n2} *for numerous eons*. C. 動歴劫數. I suspect 動 (“to move, disturb”) is a typo for 更. Then, 更歷 (“to experience, undergo”) would make better sense in the passage. I’ve translated it assuming something to this effect was the case. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 3 March 2023
-{: .revised}
-
----
+<hr/>
