--- a/01_agama/ekottarika/09/EA_09_08.md
+++ b/01_agama/ekottarika/09/EA_09_08.md
@@ -1,47 +1,64 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 9. The Only Son | 7. A Man’s Perception'
+title: 'The Numerical Discourses | Chapter 9: The Only Son | 8. A Woman’s Perception'
 type: kramdown
 base: ../../../
 previous: EA_09_07.html
 next: EA_09_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 9: The Only Son
-### 8. A Woman’s Perception
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 9: The Only Son</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八)</th>
+  <th class='en'>8. A Woman’s Perception</th>
+  <tr>
+    <td class='ch' title='T125.2.563a27'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563a28'>爾時，世尊告諸比丘： 「我於此眾中不見一法最勝、最妙，眩惑世人不生永寂，縛著牢獄無有解已。 所謂女見男子色已，便起想著。 意甚愛敬，令人不至永寂，縛著牢獄無有解已。 意不捨離，周旋往來。 今世、後世，迴轉五道，動歴劫數。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing in this assembly so supreme and sublime that prevents the benighted worldly person from reaching eternal peace and chains them in a prison where they have no freedom. That is, when a woman sees a man’s form, she becomes attached to the perceptions it produces. A woman’s mind craves and esteems it so much that it prevents her from reaching eternal peace and chains her in a prison where she has no freedom. Her mind won’t abandon it, and then she goes round and round being reborn. In this world and the next, she circulates among the five destinies for numerous eons.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b4'>爾時，世尊便説偈曰：</td>
+    <td>The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.563b6'><ul class='verse'>
+    <li class='ch'>「若生顛倒想，<br/>
+    興念恩愛心。<br/>
+    除念意染著，<br/>
+    便無此諸穢。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“When mistaken perceptions arise,<br/>
+    They generate thoughts of love and craving.<br/>
+    Abandon thinking that’s addictive,<br/>
+    Then these defilements won’t exist.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.563b8'>「是故，諸比丘，當除諸色。 莫起想著。 如是，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, one should abandon forms. Don’t become attached to the perceptions they produce. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.563b9'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see a single thing in this assembly so supreme and sublime that prevents the benighted worldly person from reaching eternal peace and chains them in a prison where they have no freedom. That is, when a woman sees a man’s form, she becomes attached to the perceptions it produces. A woman’s mind craves and esteems it so much that it prevents her from reaching eternal peace and chains her in a prison where she has no freedom. Her mind won’t abandon it, and then she goes round and round being reborn. In this world and the next, she circulates among the five destinies for numerous eons.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“When mistaken perceptions arise,\\
-They generate thoughts of love and craving.\\
-Abandon thinking that’s addictive,\\
-Then these defilements won’t exist.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0563a27" target="_blank">T125.2.563a27-b10</a>. This <em>sūtra</em> is parallel to <a href="https://www.suttacentral.net/an1.1-10" target="_blank">AN 1.6-10</a> and the second half of T792. A discussion of these parallel texts can be found in <a href="EA_09_07.html#n1" target="_blank">a note to EĀ 9.7</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-4\. “Therefore, monks, one should abandon forms. Don’t become attached to the perceptions they produce. Thus, monks, you should train yourselves.”
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 3 March 2023</p>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel to [AN 1.6-10](https://www.suttacentral.net/an1.1-10){:target="_blank"} and the second half of T792. A discussion of these parallel texts can be found in [a note to EĀ 9.7](EA_09_07.html#n1){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 3 March 2023
-{: .revised}
-
----
+<hr/>
