--- a/01_agama/ekottarika/10/EA_10_09.md
+++ b/01_agama/ekottarika/10/EA_10_09.md
@@ -1,39 +1,54 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 10. The Guarded Mind | 9. Bad Destinies'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 9. Bad Destinies'
 type: kramdown
 base: ../../../
 previous: EA_10_08.html
 next: EA_10_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 10: The Guarded Mind
-### 9. Bad Destinies
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 10: The Guarded Mind</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 惡趣</th>
+  <th class='en'>9. Bad Destinies</th>
+  <tr>
+    <td class='ch' title='T125.2.566a2'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a3'>爾時，世尊告諸比丘： 「若有比丘修行一法，便不能壞敗惡趣，一為趣善，一為趣泥洹。 云何修行一法，不能壞敗惡趣？ 所謂心無篤信。 是謂修此一法，不壞敗惡趣。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If a monk cultivates one thing, then he won’t be able to destroy the bad destinies and make a destiny that’s either good or nirvāṇa. What is the one thing that when cultivated isn’t able to destroy the bad destinies? It’s a heart that lacks sincere belief. Cultivating this one thing, one won’t destroy the bad destinies.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a7'>「云何修行一法，趣善處者？ 所謂心行篤信。 是謂修此一法，得趣善處。</td>
+    <td id='p3'>3. “What one thing when cultivated leads to a good place? That refers to a heart that practices sincere belief. Cultivating this one thing leads to a good place.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a8'>「云何修行一法，得至泥洹？ 所謂恒專心念。 是謂修行此法，得至泥洹。</td>
+    <td id='p4'>4. “What one thing when cultivated reaches nirvāṇa? That refers to the constant focus of mindfulness. Cultivating this thing reaches nirvāṇa.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a10'>「是故謂，諸比丘，專精心意念諸善本。 如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Therefore, monks, focus your thinking and be mindful of the roots of goodness. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566a11'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p6'>6. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk cultivates one thing, then he won’t be able to destroy the bad destinies and make a destiny that’s either good or nirvāṇa. What is the one thing that when cultivated isn’t able to destroy the bad destinies? It’s a heart that lacks sincere belief. Cultivating this one thing, one won’t destroy the bad destinies.
-{:#p2}
+<hr/>
 
-3\. “What one thing when cultivated leads to a good place? That refers to a heart that practices sincere belief. Cultivating this one thing leads to a good place.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “What one thing when cultivated reaches nirvāṇa? That refers to the constant focus of mindfulness. Cultivating this thing reaches nirvāṇa.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566a02" target="_blank">T125.2.566a2-12</a>. [<a href="#ref1">back</a>] </p></li>
+</ol>
+<hr/>
 
-5\. “Therefore, monks, focus your thinking and be mindful of the roots of goodness. Thus, monks, you should train yourselves.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 2 April 2023</p>
 
-6\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p6}
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 April 2023
-{: .revised}
-
----
+<hr/>
