--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 153 (41). Five Turns'
 type: kramdown
 base: ../../../
 previous: SA1_152.html
-next: SA1_158.html
+next: SA1_154.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
@@ -160,9 +160,9 @@ next: SA1_158.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This is <em>sūtra</em> no. 41 in the <cite>Taisho</cite> edition and no. 153 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009b07" target="_blank">T99.2.9b7-10a3</a>). It similar to <a href="https://suttacentral.net/sn22.56" target="_blank">SN 22.56</a>, but the analysis of the five aggregates is different. Here, each aggregate is defined in terms of its formation, enjoyment, trouble, and escape. In SN 22.56, each is discussed in terms of formation, cessation, and the path to its cessation. Beyond this difference, however, the content of the two discourses is nearly identical, so we could regard them both as two variants of the same <em>sūtra</em>. [<a href="#ref1">back</a>]</li>
-<li id="n2">In SN 22.56, a similar conclusion is repeated after each aggregate is analyzed. It would appear that 正向 (“correct heading”) corresponds with P. <em>suppaṭipannā</em> (“skillful way of proceeding” or “gone the right way”). Presumably “entered” translated a word like P. <em>āpanna</em> and refers to entering the stream.<br/>
-Both conclusions mention disillusionment and lack of desire, but this version doesn’t mention cessation even though it typically goes along with these things in a series. Instead, they culminate directly in liberation, freedom, and the end of suffering. In SN 22.56, cessation and the end of rebirth is the end result. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 41 in the <cite>Taisho</cite> edition and no. 153 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0009b07" target="_blank">T99.2.9b7-10a3</a>). It is similar to <a href="https://suttacentral.net/sn22.56" target="_blank">SN 22.56</a>, but the analysis of the five aggregates is different. Here, each aggregate is defined in terms of its formation, enjoyment, trouble, and escape. In SN 22.56, each is discussed in terms of formation, cessation, and the path to its cessation. Beyond this difference, however, the content of the two discourses is nearly identical, so we could regard them both as two variants of the same <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>In SN 22.56, a similar conclusion is repeated after each aggregate is analyzed. It would appear that 正向 (“correct heading”) corresponds with P. <em>suppaṭipannā</em> (“skillful way of proceeding” or “gone the right way”). Presumably “entered” translated a word like P. <em>āpanna</em> and refers to entering the stream.</p>
+<p>Both conclusions mention disillusionment and lack of desire, but this version doesn’t mention cessation even though it typically goes along with these things in a series. Instead, they culminate directly in liberation, freedom, and the end of suffering. In SN 22.56, cessation and the end of rebirth is the end result. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
